add calc med and food requirements for worker

--- a/src/assets/game_data/Timelines (7.10)/locales/de.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/de.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "Elektronikkomponentenproduktion",
   "{20104,102101}": "Habitat-Ringklammer",
   "{20104,102201}": "Habitat-Servicebereich",
+  "{20104,102601}": "Drillstützstruktur",
+  "{20104,102701}": "Drillzugangsmodul",
+  "{20104,102801}": "Verteidigungsbündel",
+  "{20104,102901}": "Wohnheim-Modul",
+  "{20104,103001}": "Halbring-Wohnheim",
   "{20104,10301}": "Antimateriezellenproduktion",
+  "{20104,103101}": "Speicherring",
+  "{20104,103201}": "Lagerarm",
   "{20104,103601}": "Penthouse-Beobachtungs\\-deck",
   "{20104,103701}": "Gewächshaus-Beobachtungs\\-deck",
   "{20104,103801}": "Pavillon-Beobachtungsdeck",
@@ -35,7 +42,9 @@
   "{20104,10801}": "Energiezellenproduktion",
   "{20104,10901}": "Antriebsteilproduktion",
   "{20104,11001}": "Teladi Antriebsteilproduktion",
+  "{20104,110101}": "Casino",
   "{20104,110201}": "Spielhalle",
+  "{20104,110301}": "Pheromon-Galerie",
   "{20104,11101}": "Feldspulenproduktion",
   "{20104,11201}": "Graphenproduktion",
   "{20104,11301}": "Hüllenteileproduktion",
@@ -67,6 +76,7 @@
   "{20104,13801}": "Majastaubproduktion",
   "{20104,13901}": "Majaschneckenproduktion",
   "{20104,14001}": "Sojabohnenproduktion",
+  "{20104,140101}": "Terraner Schrottrecycler",
   "{20104,14101}": "Sojagrützeproduktion",
   "{20104,14201}": "Nostropölproduktion",
   "{20104,14301}": "Raumkrautproduktion",
@@ -74,7 +84,22 @@
   "{20104,14501}": "Sumpfpflanzenproduktion",
   "{20104,14601}": "Teladianiumproduktion",
   "{20104,14701}": "Matrix-Solarpanel",
+  "{20104,14801}": "Scruffin-Produktion",
+  "{20104,14901}": "Chelt-Produktion",
+  "{20104,15001}": "Split Medizinische Versorgungsgüter-Produktion",
   "{20104,150101}": "Großraum\\-sensor\\-anlage",
+  "{20104,15101}": "Computroniksubstratproduktion",
+  "{20104,15201}": "Terraner Energiezellenproduktion",
+  "{20104,15301}": "Terraner Medizinische Versorgungsgüter-Produktion",
+  "{20104,15401}": "Metallmikrogitterproduktion",
+  "{20104,15501}": "Terranische Notrationproduktion",
+  "{20104,15601}": "Proteinpastenproduktion",
+  "{20104,15701}": "Siliziumkarbid\\-produktion",
+  "{20104,15801}": "Stimulansproduktion",
+  "{20104,15901}": "Boronen - Medizinische Versorgungsgüter-Produktion",
+  "{20104,16001}": "BoGas-Produktion",
+  "{20104,16101}": "Plankton-Produktion",
+  "{20104,16201}": "BoFu-Produktion",
   "{20104,20101}": "Argonen S-Containerlager",
   "{20104,20201}": "Argonen M-Containerlager",
   "{20104,20301}": "Argonen L-Containerlager",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Teladi L-Feststofflager",
   "{20104,23301}": "Argonen L-Universallager",
   "{20104,24001}": "Matrix-Lager",
+  "{20104,25101}": "Split S Containerlager",
+  "{20104,25201}": "Split M Containerlager",
+  "{20104,25301}": "Split L Containerlager",
+  "{20104,26101}": "Split S Flüssigkeitslager",
+  "{20104,26201}": "Split M Flüssigkeitslager",
+  "{20104,26301}": "Split L Flüssigkeitslager",
+  "{20104,27101}": "Split S Feststofflager",
+  "{20104,27201}": "Split M Feststofflager",
+  "{20104,27301}": "Split L Feststofflager",
   "{20104,30101}": "Argonen S-Habitat",
   "{20104,30201}": "Argonen M-Habitat",
   "{20104,30301}": "Argonen L-Habitat",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Teladi S-Biom",
   "{20104,30801}": "Teladi M-Biom",
   "{20104,30901}": "Teladi L-Biom",
+  "{20104,31001}": "Split S-Wohnbereich",
+  "{20104,31101}": "Split M-Wohnbereich",
+  "{20104,31201}": "Split L-Wohnbereich",
+  "{20104,31301}": "Terraner S Wohnquartiere",
+  "{20104,31401}": "Terraner M Wohnquartiere",
+  "{20104,31501}": "Terraner L Wohnquartiere",
+  "{20104,31601}": "Argonen-S-Wohnheim",
+  "{20104,31701}": "Argonen-M-Wohnheim",
+  "{20104,31801}": "Argonen-L-Wohnheim",
+  "{20104,31901}": "Boronen S-Oase",
+  "{20104,32001}": "Boronen M-Oase",
+  "{20104,32101}": "Boronen L-Oase",
+  "{20104,32201}": "Argonen-L-Wohnturm",
+  "{20104,32301}": "Argonen-XL- Wohnturm",
   "{20104,40101}": "Argonen Administrations\\-zentrum",
   "{20104,40201}": "Paraniden Administrations\\-zentrum",
   "{20104,40301}": "Teladi Administrations\\-zentrum",
+  "{20104,40401}": "Split Administrations\\-zentrum",
   "{20104,40601}": "Argonen Scheiben-Verteidigungsplattform",
   "{20104,40701}": "Paraniden Scheiben-Verteidigungsplattform",
   "{20104,40801}": "Teladi Scheiben-Verteidigungsplattform",
+  "{20104,40901}": "Split Scheiben-Verteidigungsplattform",
   "{20104,41101}": "Argonen Brücken-Verteidigungsplattform",
   "{20104,41201}": "Paraniden Brücken-Verteidigungsplattform",
   "{20104,41301}": "Teladi Brücken-Verteidigungsplattform",
+  "{20104,41401}": "Split Brücken-Verteidigungsplattform",
   "{20104,41601}": "Paraniden Fraktionshauptstadt",
   "{20104,50101}": "Argonen Basis-Verbindungsgerüst 01",
   "{20104,50201}": "Argonen Basis-Verbindungsgerüst 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Teladi Basis-Verbindungsgerüst 01",
   "{20104,50801}": "Teladi Basis-Verbindungsgerüst 02",
   "{20104,50901}": "Teladi Basis-Verbindungsgerüst 03",
+  "{20104,51001}": "Split Basis-Verbindungsgerüst 01",
+  "{20104,51101}": "Split Basis-Verbindungsgerüst 02",
+  "{20104,51201}": "Split Basis-Verbindungsgerüst 03",
   "{20104,51401}": "Argonen Kreuz-Verbindungsgerüst 01",
   "{20104,51501}": "Paraniden Kreuz-Verbindungsgerüst 01",
   "{20104,51601}": "Paraniden Kreuz-Verbindungsgerüst 02",
   "{20104,51701}": "Paraniden Y-Verbindungsgerüst 01",
   "{20104,51801}": "Teladi Kreuz-Verbindungsgerüst 01",
+  "{20104,51901}": "Split Y-Verbindungsgerüst 01",
   "{20104,52101}": "Argonen Vertikal-Verbindungsgerüst 01",
   "{20104,52201}": "Argonen Vertikal-Verbindungsgerüst 02",
   "{20104,52301}": "Paraniden Vertikal-Verbindungsgerüst 01",
   "{20104,52401}": "Paraniden Vertikal-Verbindungsgerüst 02",
   "{20104,52501}": "Teladi Vertikal-Verbindungsgerüst 01",
   "{20104,52601}": "Teladi Vertikal-Verbindungsgerüst 02",
+  "{20104,52701}": "Split Vertikal-Verbindungsgerüst 01",
+  "{20104,52801}": "Split Vertikal-Verbindungsgerüst 02",
   "{20104,52901}": "Expeditions-Basis-Verbindungsgerüst 01",
   "{20104,53001}": "Expeditions-Basis-Verbindungsgerüst 02",
   "{20104,53101}": "Expeditions-Basis-Verbindungsgerüst 03",
   "{20104,53201}": "Expeditions-Kreuz-Verbindungsgerüst 01",
   "{20104,53301}": "Expedition Vertikal-Verbindungsgerüst 01",
   "{20104,53401}": "Expeditions-Vertikal-Verbindungsgerüst 02",
+  "{20104,53501}": "Terraner Vertikal-Verbindungsgerüst 01",
+  "{20104,53601}": "Terraner Vertikal-Verbindungsgerüst 02",
+  "{20104,53701}": "Terraner Kreuz-Verbindungsgerüst 01",
+  "{20104,53801}": "Terraner Basis-Verbindungsgerüst 01",
+  "{20104,53901}": "Terraner Basis-Verbindungsgerüst 02",
+  "{20104,54001}": "Terraner Basis-Verbindungsgerüst 03",
+  "{20104,54101}": "Boronen Basis-Verbindungsgerüst 01",
+  "{20104,54201}": "Boronen Basis-Verbindungsgerüst 02",
+  "{20104,54301}": "Boronen Basis-Verbindungsgerüst 03",
+  "{20104,54401}": "Boronen Basis-Verbindungsgerüst 04",
+  "{20104,54501}": "Boronen Basis-Verbindungsgerüst 05",
+  "{20104,54601}": "Boronen Y-Verbindungsgerüst 01",
+  "{20104,54701}": "Boronen Hex-Verbindungsgerüst 01",
+  "{20104,54801}": "Boronen Vertikal-Verbindungsgerüst 01",
+  "{20104,54901}": "Boronen Vertikal-Verbindungsgerüst 02",
+  "{20104,55101}": "Argonen Bogen\\-verbindungs\\-struktur 02",
+  "{20104,55301}": "Argonen Bogen\\-verbindungs\\-struktur 01",
+  "{20104,55401}": "Argonen Bogen\\-verbindungs\\-struktur 02",
   "{20104,55501}": "Argonen Bogen\\-verbindungs\\-struktur 01",
   "{20104,55601}": "Argonen Kreuz-Verbindungsgerüst 03",
   "{20104,55701}": "Argonen Kreuz-Verbindungsgerüst 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "Assemblierungsanlage für XL-Schiffe",
   "{20104,61301}": "Fertigungshangar für S-/M-Schiffe",
   "{20104,61401}": "Wartungshangar für S-/M-Schiffe",
+  "{20104,61601}": "Terraner Wartungshangar für S-/M-Schiffe",
+  "{20104,61701}": "Terraner Wartungshangar für L-Schiffe",
+  "{20104,61801}": "Terraner Wartungshangar für XL-Schiffe",
+  "{20104,61901}": "Terraner Fertigungshangar für S-/M-Schiffe",
+  "{20104,62001}": "Terraner Fertigungshangar für L-Schiffe",
+  "{20104,62101}": "Terraner Fertigungshangar für XL-Schiffe",
+  "{20104,62201}": "Boronen Wartungshangar für S-/M-Schiffe",
+  "{20104,62301}": "Boronen Wartungshangar für L-Schiffe",
+  "{20104,62401}": "Boronen Wartungshangar für XL-Schiffe",
+  "{20104,62501}": "Boronen Fertigungshangar für S-/M-Schiffe",
+  "{20104,62601}": "Boronen Fertigungshangar für L-Schiffe",
+  "{20104,62701}": "Boronen Fertigungshangar für XL-Schiffe",
   "{20104,70101}": "1M6S Einfacher Dockbereich",
   "{20104,70201}": "1M6S Standard-Dockbereich",
   "{20104,70301}": "1M6S Luxus-Dockbereich",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Teladi Einzeldock-Raumpier",
   "{20104,71901}": "Teladi T-Dreierdock-Raumpier",
   "{20104,72001}": "Teladi E-Dreierdock-Raumpier",
+  "{20104,72101}": "Split Einzeldock-Raumpier",
+  "{20104,72201}": "Split T-Viererdock-Raumpier",
+  "{20104,72301}": "Split E-Dreierdock-Raumpier",
   "{20104,73301}": "8M Luxus Dockbereich",
   "{20104,73401}": "Argon Handelsstation Einzeldock-Raumpier",
+  "{20104,73601}": "Terraner Einzeldock Raumpier",
+  "{20104,73701}": "Terraner T-Dreierdock Raumpier",
+  "{20104,73801}": "Terraner E-Dreierdock Raumpier",
+  "{20104,73901}": "Terraner T-Viererdock Raumpier",
+  "{20104,74001}": "Terranische Handelsstation Hexa-Dock Raumpier",
+  "{20104,74101}": "Terraner 4M10S Luxus Dockbereich",
+  "{20104,74201}": "Boronen Einzeldock Raumpier",
+  "{20104,74301}": "Boronen T-Viererdock Raumpier",
+  "{20104,74401}": "Boronen E-Dreierdock Raumpier",
+  "{20104,74501}": "Handelsstation der Boronen - Viererdock Raumpier",
+  "{20104,74701}": "Boronen 4M14S Luxus-Dockbereich",
+  "{20104,74801}": "Handelsstation der Boronen Hexa-Dock-Raumpier",
   "{20104,74901}": "Argonen Einzeldock kurz Raumpier",
+  "{20104,90101}": "Terraner S Containerlager",
+  "{20104,90201}": "Terraner M Containerlager",
+  "{20104,90301}": "Terraner L Containerlager",
+  "{20104,90401}": "Terraner S Flüssigkeitslager",
+  "{20104,90501}": "Terraner M Flüssigkeitslager",
+  "{20104,90601}": "Terraner L Flüssigkeitslager",
+  "{20104,90701}": "Terraner S Feststofflager",
+  "{20104,90801}": "Terraner M Feststofflager",
+  "{20104,90901}": "Terraner L Feststofflager",
+  "{20104,91701}": "Terraner M Handelsstationscontainerlager",
+  "{20104,91901}": "Terraner S Handelsstationsflüssigkeitenlager",
+  "{20104,92501}": "Beschützyon-Schildgenerator",
+  "{20104,92601}": "Kondensateindämmungsanlage",
+  "{20104,92701}": "Boronen S-Containerlager",
+  "{20104,92801}": "Boronen M-Containerlager",
+  "{20104,92901}": "Boronen L-Containerlager",
+  "{20104,93001}": "Boronen S-Flüssigkeitslager",
+  "{20104,93101}": "Boronen M-Flüssigkeitslager",
+  "{20104,93201}": "Boronen L-Flüssigkeitslager",
+  "{20104,93301}": "Boronen S-Feststofflager",
+  "{20104,93401}": "Boronen M-Feststofflager",
+  "{20104,93501}": "Boronen L-Feststofflager",
+  "{20104,95001}": "Terraner Administrations\\-zentrum",
+  "{20104,95101}": "Terraner Scheiben-Verteidigungsplattform",
+  "{20104,95201}": "Terraner Brücken-Verteidigungsplattform",
+  "{20104,95301}": "Boronen Administrations\\-zentrum",
+  "{20104,95401}": "Boronen Scheiben-Verteidigungsplattform",
+  "{20104,95501}": "Boronen Brücken-Verteidigungsplattform",
   "{20201,101}": "Elektronikkomponenten",
   "{20201,1101}": "Nahrungsrationen",
   "{20201,1201}": "Hüllenteile",
@@ -227,11 +357,22 @@
   "{20201,4701}": "Wasser",
   "{20201,4801}": "Waffenkomponenten",
   "{20201,4901}": "Weizen",
+  "{20201,5001}": "Cheltfleisch",
   "{20201,501}": "Nanotronik",
+  "{20201,5101}": "Scruffinknollen",
+  "{20201,6001}": "Computroniksubstrat",
   "{20201,601}": "Drohnenbauteile",
+  "{20201,6101}": "Metallmikrogitter",
+  "{20201,6201}": "Proteinpaste",
+  "{20201,6301}": "Silizium\\-karbid",
+  "{20201,6401}": "Stimulanzien",
+  "{20201,6501}": "Terranische Notration",
   "{20201,6601}": "Schrott",
   "{20201,6801}": "Rohschrott",
   "{20201,701}": "Energiezellen",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "BoGas",
+  "{20201,7301}": "Plankton",
   "{20201,801}": "Antriebsteile",
   "{20201,901}": "Feldspulen"
 }
