--- a/src/assets/game_data/Timelines (7.10)/locales/en.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/en.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "Advanced Electronics Production",
   "{20104,102101}": "Habitat Ring Clamp",
   "{20104,102201}": "Habitat Service Section",
+  "{20104,102601}": "Drill Support Structure",
+  "{20104,102701}": "Drill Access Module",
+  "{20104,102801}": "Defence Array",
+  "{20104,102901}": "Dormitory Module",
+  "{20104,103001}": "Half-Ring Dormitory",
   "{20104,10301}": "Antimatter Cell Production",
+  "{20104,103101}": "Storage Ring",
+  "{20104,103201}": "Storage Arm",
   "{20104,103601}": "Penthouse Observation Deck",
   "{20104,103701}": "Conservatory Observation Deck",
   "{20104,103801}": "Pavilion Observation Deck",
@@ -35,7 +42,9 @@
   "{20104,10801}": "Energy Cell Production",
   "{20104,10901}": "Engine Part Production",
   "{20104,11001}": "Teladi Engine Part Production",
+  "{20104,110101}": "Casino",
   "{20104,110201}": "Gambling Den",
+  "{20104,110301}": "Pheromone Art Gallery",
   "{20104,11101}": "Field Coil Production",
   "{20104,11201}": "Graphene Production",
   "{20104,11301}": "Hull Part Production",
@@ -67,6 +76,7 @@
   "{20104,13801}": "Maja Dust Production",
   "{20104,13901}": "Maja Snail Production",
   "{20104,14001}": "Soja Bean Production",
+  "{20104,140101}": "Terran Scrap Recycler",
   "{20104,14101}": "Soja Husk Production",
   "{20104,14201}": "Nostrop Oil Production",
   "{20104,14301}": "Spaceweed Production",
@@ -74,7 +84,22 @@
   "{20104,14501}": "Swamp Plant Production",
   "{20104,14601}": "Teladianium Production",
   "{20104,14701}": "Matrix Solar Panel",
+  "{20104,14801}": "Scruffin Production",
+  "{20104,14901}": "Chelt Production",
+  "{20104,15001}": "Split Medical Supply Production",
   "{20104,150101}": "Wide Area Sensor Array",
+  "{20104,15101}": "Computronic Substrate Production",
+  "{20104,15201}": "Terran Energy Cell Production",
+  "{20104,15301}": "Terran Medical Supply Production",
+  "{20104,15401}": "Metallic Microlattice Production",
+  "{20104,15501}": "Terran MRE Production",
+  "{20104,15601}": "Protein Paste Production",
+  "{20104,15701}": "Silicon Carbide Production",
+  "{20104,15801}": "Stimulant Production",
+  "{20104,15901}": "Boron Medical Supply Production",
+  "{20104,16001}": "BoGas Production",
+  "{20104,16101}": "Plankton Production",
+  "{20104,16201}": "BoFu Production",
   "{20104,20101}": "Argon S Container Storage",
   "{20104,20201}": "Argon M Container Storage",
   "{20104,20301}": "Argon L Container Storage",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Teladi L Solid Storage",
   "{20104,23301}": "Argon L Universal Storage",
   "{20104,24001}": "Matrix Storage",
+  "{20104,25101}": "Split S Container Storage",
+  "{20104,25201}": "Split M Container Storage",
+  "{20104,25301}": "Split L Container Storage",
+  "{20104,26101}": "Split S Liquid Storage",
+  "{20104,26201}": "Split M Liquid Storage",
+  "{20104,26301}": "Split L Liquid Storage",
+  "{20104,27101}": "Split S Solid Storage",
+  "{20104,27201}": "Split M Solid Storage",
+  "{20104,27301}": "Split L Solid Storage",
   "{20104,30101}": "Argon S Habitat",
   "{20104,30201}": "Argon M Habitat",
   "{20104,30301}": "Argon L Habitat",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Teladi S Biome",
   "{20104,30801}": "Teladi M Biome",
   "{20104,30901}": "Teladi L Biome",
+  "{20104,31001}": "Split S Parlour",
+  "{20104,31101}": "Split M Parlour",
+  "{20104,31201}": "Split L Parlour",
+  "{20104,31301}": "Terran S Living Quarters",
+  "{20104,31401}": "Terran M Living Quarters",
+  "{20104,31501}": "Terran L Living Quarters",
+  "{20104,31601}": "Argon S Dormitory",
+  "{20104,31701}": "Argon M Dormitory",
+  "{20104,31801}": "Argon L Dormitory",
+  "{20104,31901}": "Boron S Oasis",
+  "{20104,32001}": "Boron M Oasis",
+  "{20104,32101}": "Boron L Oasis",
+  "{20104,32201}": "Argon L Housing Spire",
+  "{20104,32301}": "Argon XL Housing Spire",
   "{20104,40101}": "Argon Administrative Centre",
   "{20104,40201}": "Paranid Administrative Centre",
   "{20104,40301}": "Teladi Administrative Centre",
+  "{20104,40401}": "Split Administrative Centre",
   "{20104,40601}": "Argon Disc Defence Platform",
   "{20104,40701}": "Paranid Disc Defence Platform",
   "{20104,40801}": "Teladi Disc Defence Platform",
+  "{20104,40901}": "Split Disc Defence Platform",
   "{20104,41101}": "Argon Bridge Defence Platform",
   "{20104,41201}": "Paranid Bridge Defence Platform",
   "{20104,41301}": "Teladi Bridge Defence Platform",
+  "{20104,41401}": "Split Bridge Defence Platform",
   "{20104,41601}": "Paranid Faction Capital",
   "{20104,50101}": "Argon Base Connection Structure 01",
   "{20104,50201}": "Argon Base Connection Structure 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Teladi Base Connection Structure 01",
   "{20104,50801}": "Teladi Base Connection Structure 02",
   "{20104,50901}": "Teladi Base Connection Structure 03",
+  "{20104,51001}": "Split Base Connection Structure 01",
+  "{20104,51101}": "Split Base Connection Structure 02",
+  "{20104,51201}": "Split Base Connection Structure 03",
   "{20104,51401}": "Argon Cross Connection Structure 01",
   "{20104,51501}": "Paranid Cross Connection Structure 01",
   "{20104,51601}": "Paranid Cross Connection Structure 02",
   "{20104,51701}": "Paranid Y Connection Structure 01",
   "{20104,51801}": "Teladi Cross Connection Structure 01",
+  "{20104,51901}": "Split Y Connection Structure 01",
   "{20104,52101}": "Argon Vertical Connection Structure 01",
   "{20104,52201}": "Argon Vertical Connection Structure 02",
   "{20104,52301}": "Paranid Vertical Connection Structure 01",
   "{20104,52401}": "Paranid Vertical Connection Structure 02",
   "{20104,52501}": "Teladi Vertical Connection Structure 01",
   "{20104,52601}": "Teladi Vertical Connection Structure 02",
+  "{20104,52701}": "Split Vertical Connection Structure 01",
+  "{20104,52801}": "Split Vertical Connection Structure 02",
   "{20104,52901}": "Venture Base Connection Structure 01",
   "{20104,53001}": "Venture Base Connection Structure 02",
   "{20104,53101}": "Venture Base Connection Structure 03",
   "{20104,53201}": "Venture Cross Connection Structure 01",
   "{20104,53301}": "Venture Vertical Connection Structure 01",
   "{20104,53401}": "Venture Vertical Connection Structure 02",
+  "{20104,53501}": "Terran Vertical Connection Structure 01",
+  "{20104,53601}": "Terran Vertical Connection Structure 02",
+  "{20104,53701}": "Terran Cross Connection Structure 01",
+  "{20104,53801}": "Terran Base Connection Structure 01",
+  "{20104,53901}": "Terran Base Connection Structure 02",
+  "{20104,54001}": "Terran Base Connection Structure 03",
+  "{20104,54101}": "Boron Base Connection Structure 01",
+  "{20104,54201}": "Boron Base Connection Structure 02",
+  "{20104,54301}": "Boron Base Connection Structure 03",
+  "{20104,54401}": "Boron Base Connection Structure 04",
+  "{20104,54501}": "Boron Base Connection Structure 05",
+  "{20104,54601}": "Boron Y Connection Structure 01",
+  "{20104,54701}": "Boron Hex Connection Structure 01",
+  "{20104,54801}": "Boron Vertical Connection Structure 01",
+  "{20104,54901}": "Boron Vertical Connection Structure 02",
+  "{20104,55101}": "Argon Arc Connection Structure 02",
+  "{20104,55301}": "Argon Span Connection Structure 01",
+  "{20104,55401}": "Argon Span Connection Structure 02",
   "{20104,55501}": "Argon Arc Connection Structure 01",
   "{20104,55601}": "Argon Cross Connection Structure 03",
   "{20104,55701}": "Argon Cross Connection Structure 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "XL Ship Assembly Matrix",
   "{20104,61301}": "S/M Ship Fabrication Bay",
   "{20104,61401}": "S/M Ship Maintenance Bay",
+  "{20104,61601}": "Terran S/M Ship Maintenance Bay",
+  "{20104,61701}": "Terran L Ship Maintenance Bay",
+  "{20104,61801}": "Terran XL Ship Maintenance Bay",
+  "{20104,61901}": "Terran S/M Ship Fabrication Bay",
+  "{20104,62001}": "Terran L Ship Fabrication Bay",
+  "{20104,62101}": "Terran XL Ship Fabrication Bay",
+  "{20104,62201}": "Boron S/M Ship Maintenance Bay",
+  "{20104,62301}": "Boron L Ship Maintenance Bay",
+  "{20104,62401}": "Boron XL Ship Maintenance Bay",
+  "{20104,62501}": "Boron S/M Ship Fabrication Bay",
+  "{20104,62601}": "Boron L Ship Fabrication Bay",
+  "{20104,62701}": "Boron XL Ship Fabrication Bay",
   "{20104,70101}": "1M6S Basic Dock Area",
   "{20104,70201}": "1M6S Standard Dock Area",
   "{20104,70301}": "1M6S Luxury Dock Area",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Teladi 1-Dock Pier",
   "{20104,71901}": "Teladi 3-Dock T Pier",
   "{20104,72001}": "Teladi 3-Dock E Pier",
+  "{20104,72101}": "Split 1-Dock Pier",
+  "{20104,72201}": "Split 4-Dock T Pier",
+  "{20104,72301}": "Split 3-Dock E Pier",
   "{20104,73301}": "8M Luxury Dock Area",
   "{20104,73401}": "Argon Trading Station 1-Dock Pier",
+  "{20104,73601}": "Terran 1-Dock Pier",
+  "{20104,73701}": "Terran 3-Dock T Pier",
+  "{20104,73801}": "Terran 3-Dock E Pier",
+  "{20104,73901}": "Terran 4-Dock T Pier",
+  "{20104,74001}": "Terran Trading Station Hexa-Dock Pier",
+  "{20104,74101}": "Terran 4M10S Luxury Dock Area",
+  "{20104,74201}": "Boron 1-Dock Pier",
+  "{20104,74301}": "Boron 4-Dock T Pier",
+  "{20104,74401}": "Boron 3-Dock E Pier",
+  "{20104,74501}": "Boron Trading Station 4-Dock Pier",
+  "{20104,74701}": "Boron 4M14S Luxury Dock Area",
+  "{20104,74801}": "Boron Trading Station Hexa-Dock Pier",
   "{20104,74901}": "Argon 1-Dock Short Pier",
+  "{20104,90101}": "Terran S Container Storage",
+  "{20104,90201}": "Terran M Container Storage",
+  "{20104,90301}": "Terran L Container Storage",
+  "{20104,90401}": "Terran S Liquid Storage",
+  "{20104,90501}": "Terran M Liquid Storage",
+  "{20104,90601}": "Terran L Liquid Storage",
+  "{20104,90701}": "Terran S Solid Storage",
+  "{20104,90801}": "Terran M Solid Storage",
+  "{20104,90901}": "Terran L Solid Storage",
+  "{20104,91701}": "Terran M Trading Station Container Storage",
+  "{20104,91901}": "Terran S Trading Station Liquid Storage",
+  "{20104,92501}": "Protectyon Shield Generator",
+  "{20104,92601}": "Condensate Containment Facility",
+  "{20104,92701}": "Boron S Container Storage",
+  "{20104,92801}": "Boron M Container Storage",
+  "{20104,92901}": "Boron L Container Storage",
+  "{20104,93001}": "Boron S Liquid Storage",
+  "{20104,93101}": "Boron M Liquid Storage",
+  "{20104,93201}": "Boron L Liquid Storage",
+  "{20104,93301}": "Boron S Solid Storage",
+  "{20104,93401}": "Boron M Solid Storage",
+  "{20104,93501}": "Boron L Solid Storage",
+  "{20104,95001}": "Terran Administrative Centre",
+  "{20104,95101}": "Terran Disc Defence Platform",
+  "{20104,95201}": "Terran Bridge Defence Platform",
+  "{20104,95301}": "Boron Administrative Centre",
+  "{20104,95401}": "Boron Disc Defence Platform",
+  "{20104,95501}": "Boron Bridge Defence Platform",
   "{20201,101}": "Advanced Electronics",
   "{20201,1101}": "Food Rations",
   "{20201,1201}": "Hull Parts",
@@ -227,11 +357,22 @@
   "{20201,4701}": "Water",
   "{20201,4801}": "Weapon Components",
   "{20201,4901}": "Wheat",
+  "{20201,5001}": "Chelt Meat",
   "{20201,501}": "Claytronics",
+  "{20201,5101}": "Scruffin Fruit",
+  "{20201,6001}": "Computronic Substrate",
   "{20201,601}": "Drone Components",
+  "{20201,6101}": "Metallic Microlattice",
+  "{20201,6201}": "Protein Paste",
+  "{20201,6301}": "Silicon Carbide",
+  "{20201,6401}": "Stimulants",
+  "{20201,6501}": "Terran MRE",
   "{20201,6601}": "Scrap Metal",
   "{20201,6801}": "Raw Scrap",
   "{20201,701}": "Energy Cells",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "BoGas",
+  "{20201,7301}": "Plankton",
   "{20201,801}": "Engine Parts",
   "{20201,901}": "Field Coils"
 }
