--- a/src/assets/game_data/Timelines (7.10)/locales/es.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/es.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "Producción de Electrónica Avanzada",
   "{20104,102101}": "Abrazaderas del Anillo del Habitat",
   "{20104,102201}": "Seccion de Servicio del Habitat",
+  "{20104,102601}": "Estructura de Soporte de Perforadora",
+  "{20104,102701}": "Módulo de Acceso a la Perforadora",
+  "{20104,102801}": "Matriz de Defensa",
+  "{20104,102901}": "Módulo de Dormitorio",
+  "{20104,103001}": "Dormitorio de Medio Anillo",
   "{20104,10301}": "Producción de Célula de Antimateria",
+  "{20104,103101}": "Anillo de Almacenaje",
+  "{20104,103201}": "Brazo de Almacenaje",
   "{20104,103601}": "Puente de Observación del Penthouse",
   "{20104,103701}": "Invernadero de Observación",
   "{20104,103801}": "Pabellón de Observación",
@@ -35,7 +42,9 @@
   "{20104,10801}": "Producción de Célula de Energía",
   "{20104,10901}": "Producción de Componentes de Motor",
   "{20104,11001}": "Producción de Componentes de Motor Teladi",
+  "{20104,110101}": "Casino",
   "{20104,110201}": "Antro de Apuestas",
+  "{20104,110301}": "Galería de Arte de Feromonas",
   "{20104,11101}": "Producción de Bobina de Campo",
   "{20104,11201}": "Producción de Grafeno",
   "{20104,11301}": "Producción de Partes de Casco",
@@ -67,6 +76,7 @@
   "{20104,13801}": "Producción de Polvo de Maja",
   "{20104,13901}": "Producción de Caracol de Maja",
   "{20104,14001}": "Producción de Haba de Soja",
+  "{20104,140101}": "Reciclador de Chatarra Terran",
   "{20104,14101}": "Productor de Cáscara de Soja",
   "{20104,14201}": "Producción de Aceite Nostrop",
   "{20104,14301}": "Producción de Hierba Espacial",
@@ -74,7 +84,22 @@
   "{20104,14501}": "Producción de Plantas del Pantano",
   "{20104,14601}": "Producción de Teladianium",
   "{20104,14701}": "Panel Solar Matriz",
+  "{20104,14801}": "Producción de Fruta Scruffin",
+  "{20104,14901}": "Producción de Carne de Chelt",
+  "{20104,15001}": "Producción de Suministros Médicos Split",
   "{20104,150101}": "Matriz de sensores de área amplia",
+  "{20104,15101}": "Producción de Substrato Computrónico",
+  "{20104,15201}": "Producción de Célula de Energía Terran",
+  "{20104,15301}": "Producción de Suministros Médicos Terran",
+  "{20104,15401}": "Producción de Microenrejado Metálico",
+  "{20104,15501}": "Producción de MRE Terran",
+  "{20104,15601}": "Producción de Pasta de Proteína",
+  "{20104,15701}": "Producción de Carburo de Silicio",
+  "{20104,15801}": "Producción de Estimulante",
+  "{20104,15901}": "Producción de Suministros Médicos Boron",
+  "{20104,16001}": "Producción de BoGas",
+  "{20104,16101}": "Producción de Plancton",
+  "{20104,16201}": "Producción de BoFu",
   "{20104,20101}": "Almacenamiento en Contenedores S Argon",
   "{20104,20201}": "Almacenamiento en Contenedores M Argon",
   "{20104,20301}": "Almacenamiento en Contenedores L Argon",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Almacenamiento de Sólidos L Teladi",
   "{20104,23301}": "Almacenamiento Universal L Argon",
   "{20104,24001}": "Almacenamiento de Matrices",
+  "{20104,25101}": "Almacenamiento en Contenedores Split S",
+  "{20104,25201}": "Almacenamiento en Contenedores Split M",
+  "{20104,25301}": "Almacenamiento en Contenedores Split L",
+  "{20104,26101}": "Almacenamiento de Líquidos Split S",
+  "{20104,26201}": "Almacenamiento de Líquidos Split M",
+  "{20104,26301}": "Almacenamiento de Líquidos Split L",
+  "{20104,27101}": "Almacenamiento de Sólidos Split S",
+  "{20104,27201}": "Almacenamiento de Sólidos Split M",
+  "{20104,27301}": "Almacenamiento de Sólidos Split L",
   "{20104,30101}": "Hábitat S Argon",
   "{20104,30201}": "Hábitat M Argon",
   "{20104,30301}": "Hábitat L Argon",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Bioma S Teladi",
   "{20104,30801}": "Bioma M Teladi",
   "{20104,30901}": "Bioma L Teladi",
+  "{20104,31001}": "Sala S Split",
+  "{20104,31101}": "Sala M Split",
+  "{20104,31201}": "Sala L Split",
+  "{20104,31301}": "Cuarteles de Vivienda Terran S",
+  "{20104,31401}": "Cuarteles de Vivienda Terran M",
+  "{20104,31501}": "Cuarteles de Vivienda Terran L",
+  "{20104,31601}": "Dormitorio Argon S",
+  "{20104,31701}": "Dormitorio Argon M",
+  "{20104,31801}": "Dormitorio Argon L",
+  "{20104,31901}": "Oasis Boron S",
+  "{20104,32001}": "Oasis Boron M",
+  "{20104,32101}": "Oasis Boron L",
+  "{20104,32201}": "Chapitel de Vivienda Argon L",
+  "{20104,32301}": "Chapitel de Vivienda Argon XL",
   "{20104,40101}": "Centro Administrativo Argon",
   "{20104,40201}": "Centro Administrativo Paranid",
   "{20104,40301}": "Centro Administrativo Teladi",
+  "{20104,40401}": "Centro Administrativo Split",
   "{20104,40601}": "Plataforma de Defensa en Disco Argon",
   "{20104,40701}": "Plataforma de Defensa en Disco Paranid",
   "{20104,40801}": "Plataforma de Defensa en Disco Teladi",
+  "{20104,40901}": "Plataforma de Defensa en Disco Split",
   "{20104,41101}": "Plataforma de Defensa en Puente Argon",
   "{20104,41201}": "Plataforma de Defensa en Puente Paranid",
   "{20104,41301}": "Plataforma de Defensa en Puente Teladi",
+  "{20104,41401}": "Plataforma de Defensa en Puente Split",
   "{20104,41601}": "Capital de la Facción Paranid",
   "{20104,50101}": "Argon Estructura Básica de Conexión 01",
   "{20104,50201}": "Argon Estructura Básica de Conexión 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Estructura Básica de Conexión 01 Teladi",
   "{20104,50801}": "Estructura Básica de Conexión 02 Teladi",
   "{20104,50901}": "Estructura Básica de Conexión 03 Teladi",
+  "{20104,51001}": "Estructura Básica de Conexión 01 Split",
+  "{20104,51101}": "Estructura Básica de Conexión 02 Split",
+  "{20104,51201}": "Estructura Básica de Conexión 03 Split",
   "{20104,51401}": "Estructura de Conexión en Cruz 01 Argon",
   "{20104,51501}": "Estructura de Conexión en Cruz 01 Paranid",
   "{20104,51601}": "Estructura de Conexión en Cruz 02 Paranid",
   "{20104,51701}": "Estructura de Conexión en Y 01 Paranid",
   "{20104,51801}": "Estructura de Conexión en Cruz 01 Teladi",
+  "{20104,51901}": "Estructura de Conexión en Y 01 Split",
   "{20104,52101}": "Estructura de Conexión Vertical 01 Argon",
   "{20104,52201}": "Estructura de Conexión Vertical 02 Argon",
   "{20104,52301}": "Estructura de Conexión Vertical 01 Paranid",
   "{20104,52401}": "Estructura de Conexión Vertical 02 Paranid",
   "{20104,52501}": "Estructura de Conexión Vertical 01 Teladi",
   "{20104,52601}": "Estructura de Conexión Vertical 02 Teladi",
+  "{20104,52701}": "Estructura de Conexión Vertical 01 Split",
+  "{20104,52801}": "Estructura de Conexión Vertical 02 Split",
   "{20104,52901}": "Estructura Básica de Conexión Incursión 01",
   "{20104,53001}": "Incursión Estructura Básica de Conexión 02",
   "{20104,53101}": "Estructura Básica de Conexión Incursión 03",
   "{20104,53201}": "Estructura de Conexión en Cruz Incursión 01",
   "{20104,53301}": "Estructura de Conexión Vertical Incursión 01",
   "{20104,53401}": "Estructura de Conexión Vertical Incursión 02",
+  "{20104,53501}": "Estructura de Conexión Vertical 01 Terran",
+  "{20104,53601}": "Estructura de Conexión Vertical 02 Terran",
+  "{20104,53701}": "Estructura de Conexión en Cruz 01 Terran",
+  "{20104,53801}": "Estructura Básica de Conexión 01 Terran",
+  "{20104,53901}": "Estructura Básica de Conexión 02 Terran",
+  "{20104,54001}": "Estructura Básica de Conexión 03 Terran",
+  "{20104,54101}": "Estructura Básica de Conexión 01 Boron",
+  "{20104,54201}": "Estructura Básica de Conexión 02 Boron",
+  "{20104,54301}": "Estructura Básica de Conexión 03 Boron",
+  "{20104,54401}": "Estructura Básica de Conexión 04 Boron",
+  "{20104,54501}": "Estructura Básica de Conexión 05 Boron",
+  "{20104,54601}": "Estructura de Conexión en Y 01 Boron",
+  "{20104,54701}": "Estructura de Conexión Hexagonal 01 Boron",
+  "{20104,54801}": "Estructura de Conexión Vertical 01 Boron",
+  "{20104,54901}": "Estructura de Conexión Vertical 02 Boron",
+  "{20104,55101}": "Estructura de Conexión de Arco 02 Argon",
+  "{20104,55301}": "Estructura de Conexión de Arcada Argon 01",
+  "{20104,55401}": "Estructura de Conexión de Arcada Argon 02",
   "{20104,55501}": "Estructura de Conexión de Arco 01 Argon",
   "{20104,55601}": "Estructura de Conexión en Cruz 03 Argon",
   "{20104,55701}": "Estructura de Conexión en Cruz 02 Argon",
@@ -165,6 +240,18 @@
   "{20104,61201}": "Matriz de Montaje de Nave XL",
   "{20104,61301}": "Bahía de Fabricación de Nave S/M",
   "{20104,61401}": "Bahía de Mantenimiento de Nave S/M",
+  "{20104,61601}": "Bahía de Mantenimiento de Nave S/M Terran",
+  "{20104,61701}": "Bahía de Mantenimiento de Naves L Terran",
+  "{20104,61801}": "Bahía de Mantenimiento de Naves XL Terran",
+  "{20104,61901}": "Bahía de Fabricación de Nave S/M Terran",
+  "{20104,62001}": "Bahía de Fabricación de Naves L Terran",
+  "{20104,62101}": "Bahía de Fabricación de Naves XL Terran",
+  "{20104,62201}": "Bahía de Mantenimiento de Nave S/M Boron",
+  "{20104,62301}": "Bahía de Mantenimiento de Naves L Boron",
+  "{20104,62401}": "Bahía de Mantenimiento de Naves XL Boron",
+  "{20104,62501}": "Bahía de Fabricación de Nave S/M Boron",
+  "{20104,62601}": "Bahía de Fabricación de Naves L Boron",
+  "{20104,62701}": "Bahía de Fabricación de Naves XL Boron",
   "{20104,70101}": "Area de Atraque Básico 1M6S",
   "{20104,70201}": "Area de Atraque Estándar 1M6S",
   "{20104,70301}": "Area de Atraque Lujo 1M6S",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Embarcadero Teladi Muelle-1",
   "{20104,71901}": "Embarcadero Teladi Muelle-3 T",
   "{20104,72001}": "Embarcadero Teladi Muelle-3 E",
+  "{20104,72101}": "Embarcadero Split Muelle-1",
+  "{20104,72201}": "Embarcadero Split Muelle-4 T",
+  "{20104,72301}": "Embarcadero Split Muelle-3 E",
   "{20104,73301}": "Area de Atraque Lujo 8M",
   "{20104,73401}": "Embarcadero Estación Comercial Argon Muelle-1",
+  "{20104,73601}": "Muelle-1 Embarcadero Terran",
+  "{20104,73701}": "Muelle-3 T de Embarcadero Terran",
+  "{20104,73801}": "Muelle-3 E de Embarcadero Terran",
+  "{20104,73901}": "Muelle-4 T de Embarcadero Terran",
+  "{20104,74001}": "Muelle Hexagonal de Estación de Comercio Terran de Embarcadero",
+  "{20104,74101}": "Area de Atraque 4M10P Lujo Terran",
+  "{20104,74201}": "Muelle-1 Embarcadero Boron",
+  "{20104,74301}": "Muelle-4 T Embarcadero Boron",
+  "{20104,74401}": "Muelle-3 E Embarcadero Boron",
+  "{20104,74501}": "Estación Comercial Boron Muelle-4 Embarcadero",
+  "{20104,74701}": "Area de Atraque de Lujo 4M14P Boron",
+  "{20104,74801}": "Embarcadero Estación Comercial Boron Muelle Hexagonal",
   "{20104,74901}": "Embarcadero Sin un muelle Argon",
+  "{20104,90101}": "Almacenamiento en Contenedores Terran S",
+  "{20104,90201}": "Almacenamiento en Contenedores Terran M",
+  "{20104,90301}": "Almacenamiento en Contenedores Terran L",
+  "{20104,90401}": "Almacenamiento de Líquidos Terran S",
+  "{20104,90501}": "Almacenamiento de Líquidos Terran M",
+  "{20104,90601}": "Almacenamiento de Líquidos Terran L",
+  "{20104,90701}": "Almacenamiento de Sólidos Terran S",
+  "{20104,90801}": "Almacenamiento de Sólidos Terran M",
+  "{20104,90901}": "Almacenamiento de Sólidos Terran L",
+  "{20104,91701}": "Contenedor de Carga de Estación de Comercio Terran M",
+  "{20104,91901}": "Contenedor de Líquidos de Estación de Comercio Terran S",
+  "{20104,92501}": "Generador de Escudo de Protectyon",
+  "{20104,92601}": "instalación de Almacenaje del Condensado",
+  "{20104,92701}": "Almacenamiento en Contenedores S Boron",
+  "{20104,92801}": "Almacenamiento en Contenedores M Boron",
+  "{20104,92901}": "Almacenamiento en Contenedores L Boron",
+  "{20104,93001}": "Almacenamiento de Líquidos S Boron",
+  "{20104,93101}": "Almacenamiento de Líquidos M Boron",
+  "{20104,93201}": "Almacenamiento de Líquidos L Boron",
+  "{20104,93301}": "Almacenamiento de Sólidos S Boron",
+  "{20104,93401}": "Almacenamiento de Sólidos M Boron",
+  "{20104,93501}": "Almacenamiento de Sólidos L Boron",
+  "{20104,95001}": "Centro Administrativo Terran",
+  "{20104,95101}": "Plataforma de Defensa en Disco Terran",
+  "{20104,95201}": "Plataforma de Defensa en Puente Terran",
+  "{20104,95301}": "Centro Administrativo Boron",
+  "{20104,95401}": "Plataforma de Defensa en Disco Boron",
+  "{20104,95501}": "Plataforma de Defensa en Puente Boron",
   "{20201,101}": "Electrónicos Avanzados",
   "{20201,1101}": "Raciones de Comida",
   "{20201,1201}": "Partes de Casco",
@@ -227,11 +357,22 @@
   "{20201,4701}": "Agua",
   "{20201,4801}": "Componentes de Armas",
   "{20201,4901}": "Trigo",
+  "{20201,5001}": "Carne de Chelt",
   "{20201,501}": "Nano-Robots",
+  "{20201,5101}": "Fruta Scruffin",
+  "{20201,6001}": "Sustrato Computrónico",
   "{20201,601}": "Componentes de Dron",
+  "{20201,6101}": "Microenrejado Metálico",
+  "{20201,6201}": "Pasta de Proteína",
+  "{20201,6301}": "Carburo de Silicio",
+  "{20201,6401}": "Estimulantes",
+  "{20201,6501}": "MRE Terran",
   "{20201,6601}": "Metal Chatarra",
   "{20201,6801}": "Chatarra en Bruto",
   "{20201,701}": "Células de Energía",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "BoGas",
+  "{20201,7301}": "Plancton",
   "{20201,801}": "Componentes de Motores",
   "{20201,901}": "Bobinas de Campo"
 }
