--- a/src/assets/game_data/Timelines (7.10)/locales/fr.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/fr.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "Production d'électronique avancée",
   "{20104,102101}": "Attache d'anneau d'Habitat",
   "{20104,102201}": "Section de service d'Habitat",
+  "{20104,102601}": "Structure de support de forage",
+  "{20104,102701}": "Module d'accès au forage",
+  "{20104,102801}": "Batterie de défense",
+  "{20104,102901}": "Module dortoir",
+  "{20104,103001}": "Dortoir en demi-anneau",
   "{20104,10301}": "Production de cellules d'antimatière",
+  "{20104,103101}": "Anneau de stockage",
+  "{20104,103201}": "Bras de stockage",
   "{20104,103601}": "Terrasse d'observation",
   "{20104,103701}": "Dôme d'observation",
   "{20104,103801}": "Pavillion d'observation",
@@ -35,7 +42,9 @@
   "{20104,10801}": "Production de photopiles",
   "{20104,10901}": "Production de pièces de moteur",
   "{20104,11001}": "Teladi Production de pièces de moteur",
+  "{20104,110101}": "Casino",
   "{20104,110201}": "Arène des paris",
+  "{20104,110301}": "Académie d'Art Phéromonal",
   "{20104,11101}": "Production de bobines de champ",
   "{20104,11201}": "Production de graphène",
   "{20104,11301}": "Production de pièces de coque",
@@ -67,6 +76,7 @@
   "{20104,13801}": "Production de poussière de Maja",
   "{20104,13901}": "Production d'escargots Maja",
   "{20104,14001}": "Production de noix de soja",
+  "{20104,140101}": "Recycleur de ferraille Terrien",
   "{20104,14101}": "Production d'enveloppes de soja",
   "{20104,14201}": "Production de Nostrop",
   "{20104,14301}": "Production d'herbe de l'espace",
@@ -74,7 +84,22 @@
   "{20104,14501}": "Production d'herbe de marécage",
   "{20104,14601}": "Production de teladianium",
   "{20104,14701}": "Matrice de panneaux solaires",
+  "{20104,14801}": "Production de Scruffin",
+  "{20104,14901}": "Production de Chelt",
+  "{20104,15001}": "Split Production de fournitures médicales",
   "{20104,150101}": "Réseau de capteurs à portée étendue",
+  "{20104,15101}": "Production de substrat informatique",
+  "{20104,15201}": "Terrien Production de photopiles",
+  "{20104,15301}": "Terrien Production de fournitures médicales",
+  "{20104,15401}": "Production de micro-treillis métallique",
+  "{20104,15501}": "Production de plats cuisinés terriens",
+  "{20104,15601}": "Production de pâte protéinée",
+  "{20104,15701}": "Production de carbure de silicium",
+  "{20104,15801}": "Production de stimulants",
+  "{20104,15901}": "Boron Production de fournitures médicales",
+  "{20104,16001}": "Production de Gaz Bo",
+  "{20104,16101}": "Production de Plancton",
+  "{20104,16201}": "Production de BoFu",
   "{20104,20101}": "Argon S Stockage de conteneurs",
   "{20104,20201}": "Argon M Stockage de conteneurs",
   "{20104,20301}": "Argon L Stockage de conteneurs",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Teladi L Stockage de solide",
   "{20104,23301}": "Argon L Stockage universel",
   "{20104,24001}": "Stockage de matrices",
+  "{20104,25101}": "Split S Stockage de conteneurs",
+  "{20104,25201}": "Split M Stockage de conteneurs",
+  "{20104,25301}": "Split L Stockage de conteneurs",
+  "{20104,26101}": "Split S Stockage de liquide",
+  "{20104,26201}": "Split M Stockage de liquide",
+  "{20104,26301}": "Split L Stockage de liquide",
+  "{20104,27101}": "Split S Stockage de solide",
+  "{20104,27201}": "Split M Stockage de solide",
+  "{20104,27301}": "Split L Stockage de solide",
   "{20104,30101}": "Argon S Habitat",
   "{20104,30201}": "Argon M Habitat",
   "{20104,30301}": "Argon L Habitat",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Teladi S Biome",
   "{20104,30801}": "Teladi M Biome",
   "{20104,30901}": "Teladi L Biome",
+  "{20104,31001}": "Split S Salle",
+  "{20104,31101}": "Split M Salle",
+  "{20104,31201}": "Split L Salle",
+  "{20104,31301}": "Terrien S Quartiers d'habitation",
+  "{20104,31401}": "Terrien M Quartiers d'habitation",
+  "{20104,31501}": "Terrien L Quartiers d'habitation",
+  "{20104,31601}": "Dortoir S Argon",
+  "{20104,31701}": "Dortoir M Argon",
+  "{20104,31801}": "Dortoir L Argon",
+  "{20104,31901}": "Boron S Oasis",
+  "{20104,32001}": "Boron M Oasis",
+  "{20104,32101}": "Boron L Oasis",
+  "{20104,32201}": "Argon L Flèche résidentielle",
+  "{20104,32301}": "Argon XL Flèche résidentielle",
   "{20104,40101}": "Argon Centre administratif",
   "{20104,40201}": "Paranide Centre administratif",
   "{20104,40301}": "Teladi Centre administratif",
+  "{20104,40401}": "Split Centre administratif",
   "{20104,40601}": "Argon Plateforme de défense circulaire",
   "{20104,40701}": "Paranide Plateforme de défense circulaire",
   "{20104,40801}": "Teladi Plateforme de défense circulaire",
+  "{20104,40901}": "Split Plateforme de défense circulaire",
   "{20104,41101}": "Argon Plateforme de défense linéaire",
   "{20104,41201}": "Paranide Plateforme de défense linéaire",
   "{20104,41301}": "Teladi Plateforme de défense linéaire",
+  "{20104,41401}": "Split Plateforme de défense linéaire",
   "{20104,41601}": "Capitale de la faction Paranide",
   "{20104,50101}": "Argon Structure de connexion basique 01",
   "{20104,50201}": "Argon Structure de connexion basique 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Teladi Structure de connexion basique 01",
   "{20104,50801}": "Teladi Structure de connexion basique 02",
   "{20104,50901}": "Teladi Structure de connexion basique 03",
+  "{20104,51001}": "Split Structure de connexion basique 01",
+  "{20104,51101}": "Split Structure de connexion basique 02",
+  "{20104,51201}": "Split Structure de connexion basique 03",
   "{20104,51401}": "Argon Structure de connexion en croix 01",
   "{20104,51501}": "Paranide Structure de connexion en croix 01",
   "{20104,51601}": "Paranide Structure de connexion en croix 02",
   "{20104,51701}": "Paranide Structure de connexion en Y 01",
   "{20104,51801}": "Teladi Structure de connexion en croix 01",
+  "{20104,51901}": "Split Structure de connexion en Y 01",
   "{20104,52101}": "Argon Structure de connexion verticale 01",
   "{20104,52201}": "Argon Structure de connexion verticale 02",
   "{20104,52301}": "Paranide Structure de connexion verticale 01",
   "{20104,52401}": "Paranide Structure de connexion verticale 02",
   "{20104,52501}": "Teladi Structure de connexion verticale 01",
   "{20104,52601}": "Teladi Structure de connexion verticale 02",
+  "{20104,52701}": "Split Structure de connexion verticale 01",
+  "{20104,52801}": "Split Structure de connexion verticale 02",
   "{20104,52901}": "Structure de connexion basique 01 Aventure",
   "{20104,53001}": "Structure de connexion basique 02 Aventure",
   "{20104,53101}": "Structure de connexion basique 03 Aventure",
   "{20104,53201}": "Structure de connexion en croix 01 Aventure",
   "{20104,53301}": "Structure de connexion verticale 01 Aventure",
   "{20104,53401}": "Structure de connexion verticale 02 Aventure",
+  "{20104,53501}": "Terrien Structure de connexion verticale 01",
+  "{20104,53601}": "Terrien Structure de connexion verticale 02",
+  "{20104,53701}": "Terrien Structure de connexion en croix 01",
+  "{20104,53801}": "Terrien Structure de connexion basique 01",
+  "{20104,53901}": "Terrien Structure de connexion basique 02",
+  "{20104,54001}": "Terrien Structure de connexion basique 03",
+  "{20104,54101}": "Boron Structure de connexion basique 01",
+  "{20104,54201}": "Boron Structure de connexion basique 02",
+  "{20104,54301}": "Boron Structure de connexion basique 03",
+  "{20104,54401}": "Boron Structure de connexion basique 04",
+  "{20104,54501}": "Boron Structure de connexion basique 05",
+  "{20104,54601}": "Boron Structure de connexion en Y 01",
+  "{20104,54701}": "Boron Structure de connexion hexagonale 01",
+  "{20104,54801}": "Boron Structure de connexion verticale 01",
+  "{20104,54901}": "Boron Structure de connexion verticale 02",
+  "{20104,55101}": "Argon Structure de connexion en arc 02",
+  "{20104,55301}": "Argon Structure de connexion en travée 01",
+  "{20104,55401}": "Argon Structure de connexion en travée 02",
   "{20104,55501}": "Argon Structure de connexion en arc 01",
   "{20104,55601}": "Argon Structure de connexion en croix 03",
   "{20104,55701}": "Argon Structure de connexion en croix 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "Matrice d'assemblage de vaisseaux de classe XL",
   "{20104,61301}": "Baie de fabrication de vaisseaux de classe S/M",
   "{20104,61401}": "Baie de maintenance de vaisseaux de classe S/M",
+  "{20104,61601}": "Terrien Baie de maintenance de vaisseaux de classe S/M",
+  "{20104,61701}": "Terrien Baie de maintenance de vaisseaux de classe L",
+  "{20104,61801}": "Terrien Baie de maintenance de vaisseaux de classe XL",
+  "{20104,61901}": "Terrien Baie de fabrication de vaisseaux de classe S/M",
+  "{20104,62001}": "Terrien Baie de fabrication de vaisseaux de classe L",
+  "{20104,62101}": "Terrien Baie de fabrication de vaisseaux de classe XL",
+  "{20104,62201}": "Boron Baie de maintenance de vaisseaux de classe S/M",
+  "{20104,62301}": "Boron Baie de maintenance de vaisseaux de classe L",
+  "{20104,62401}": "Boron Baie de maintenance de vaisseaux de classe XL",
+  "{20104,62501}": "Boron Baie de fabrication de vaisseaux de classe S/M",
+  "{20104,62601}": "Boron Baie de fabrication de vaisseaux de classe L",
+  "{20104,62701}": "Boron Baie de fabrication de vaisseaux de classe XL",
   "{20104,70101}": "1M 6S Basique Zone d'amarrage",
   "{20104,70201}": "1M 6S Standard Zone d'amarrage",
   "{20104,70301}": "1M 6S Zone d'amarrage de luxe",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Teladi 1-Dock Jetée",
   "{20104,71901}": "Teladi 3-Dock T Jetée",
   "{20104,72001}": "Teladi 3-Dock E Jetée",
+  "{20104,72101}": "Split 1-Dock Jetée",
+  "{20104,72201}": "Split 4-Dock T Jetée",
+  "{20104,72301}": "Split 3-Dock E Jetée",
   "{20104,73301}": "8M de luxe Zone d'amarrage",
   "{20104,73401}": "Station commerciale argonne 1-Dock Jetée",
+  "{20104,73601}": "Terrien 1-Dock Jetée",
+  "{20104,73701}": "Terrien 3-Dock T Jetée",
+  "{20104,73801}": "Terrien 3-Dock E Jetée",
+  "{20104,73901}": "Terrien 4-Dock T Jetée",
+  "{20104,74001}": "Station commerciale terrienne Hexa-Dock Jetée",
+  "{20104,74101}": "Terrien 4M10S de luxe Zone d'amarrage",
+  "{20104,74201}": "Boron 1-Dock Jetée",
+  "{20104,74301}": "Boron 4-Dock T Jetée",
+  "{20104,74401}": "Boron 3-Dock E Jetée",
+  "{20104,74501}": "Station commerciale Boron 4-Dock Jetée",
+  "{20104,74701}": "Boron 4M14S Zone d'amarrage de luxe",
+  "{20104,74801}": "Jetée de Station commerciale Boron Hexa-Dock",
   "{20104,74901}": "Argon 1-Dock Court Jetée",
+  "{20104,90101}": "Terrien S Stockage de conteneurs",
+  "{20104,90201}": "Terrien M Stockage de conteneurs",
+  "{20104,90301}": "Terrien L Stockage de conteneurs",
+  "{20104,90401}": "Terrien S Stockage de liquide",
+  "{20104,90501}": "Terrien M Stockage de liquide",
+  "{20104,90601}": "Terrien L Stockage de liquide",
+  "{20104,90701}": "Terrien S Stockage de solide",
+  "{20104,90801}": "Terrien M Stockage de solide",
+  "{20104,90901}": "Terrien L Stockage de solide",
+  "{20104,91701}": "Terrien M Stockage de conteneurs de station commerciale",
+  "{20104,91901}": "Terrien S Stockage liquide de station commerciale",
+  "{20104,92501}": "Générateur de boucliers Protectyon",
+  "{20104,92601}": "Installation de confinement de condensat",
+  "{20104,92701}": "Boron S Stockage de conteneurs",
+  "{20104,92801}": "Boron M Stockage de conteneurs",
+  "{20104,92901}": "Boron L Stockage de conteneurs",
+  "{20104,93001}": "Boron S Stockage de liquide",
+  "{20104,93101}": "Boron M Stockage de liquide",
+  "{20104,93201}": "Boron L Stockage de liquide",
+  "{20104,93301}": "Boron S Stockage de solide",
+  "{20104,93401}": "Boron M Stockage de solide",
+  "{20104,93501}": "Boron L Stockage de solide",
+  "{20104,95001}": "Terrien Centre administratif",
+  "{20104,95101}": "Terrien Plateforme de défense circulaire",
+  "{20104,95201}": "Terrien Plateforme de défense linéaire",
+  "{20104,95301}": "Boron Centre administratif",
+  "{20104,95401}": "Boron Plateforme de défense circulaire",
+  "{20104,95501}": "Boron Plateforme de défense linéaire",
   "{20201,101}": "Composants électroniques avancés",
   "{20201,1101}": "Ration de nourriture",
   "{20201,1201}": "Pièces de coque",
@@ -227,11 +357,22 @@
   "{20201,4701}": "Eau",
   "{20201,4801}": "Composants d'armements",
   "{20201,4901}": "Blé",
+  "{20201,5001}": "Viande de Chelt",
   "{20201,501}": "Nanobots",
+  "{20201,5101}": "Fruit Scruffin",
+  "{20201,6001}": "Substrat informatique",
   "{20201,601}": "Composants pour drones",
+  "{20201,6101}": "Micro-treillis métallique",
+  "{20201,6201}": "Pâte protéinée",
+  "{20201,6301}": "Carbure de silicium",
+  "{20201,6401}": "Stimulants",
+  "{20201,6501}": "Plat cuisiné Terrien",
   "{20201,6601}": "Ferraille",
   "{20201,6801}": "Ferraille brute",
   "{20201,701}": "Photopiles",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "Gaz Bo",
+  "{20201,7301}": "Plancton",
   "{20201,801}": "Pièces de moteur",
   "{20201,901}": "Bobines de champ"
 }
