--- a/src/assets/game_data/Timelines (7.10)/locales/ja.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/ja.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "高度電子機器の製造",
   "{20104,102101}": "居住施設用リング締着装置",
   "{20104,102201}": "居住施設サービス区",
+  "{20104,102601}": "ドリル支持構造",
+  "{20104,102701}": "ドリルアクセスモジュール",
+  "{20104,102801}": "防衛システムアレイ",
+  "{20104,102901}": "宿舎モジュール",
+  "{20104,103001}": "ハーフリング型宿舎",
   "{20104,10301}": "反物質セルの製造",
+  "{20104,103101}": "保管庫リング",
+  "{20104,103201}": "保管庫アーム",
   "{20104,103601}": "ペントハウス展望デッキ",
   "{20104,103701}": "サンルーム展望デッキ",
   "{20104,103801}": "パビリオン展望デッキ",
@@ -35,7 +42,9 @@
   "{20104,10801}": "エネルギーセルの製造",
   "{20104,10901}": "エンジン部品の製造",
   "{20104,11001}": "テラディ エンジン部品の製造",
+  "{20104,110101}": "カジノ",
   "{20104,110201}": "賭博場",
+  "{20104,110301}": "フェロモンアートギャラリー",
   "{20104,11101}": "フィールドコイルの製造",
   "{20104,11201}": "グラフェンの製造",
   "{20104,11301}": "船体部品の製造",
@@ -67,6 +76,7 @@
   "{20104,13801}": "マジャダストの生産",
   "{20104,13901}": "マジャ巻貝の生産",
   "{20104,14001}": "大豆の生産",
+  "{20104,140101}": "テラン スクラップ再利用機",
   "{20104,14101}": "大豆の殻の生産",
   "{20104,14201}": "ノストロップオイルの生産",
   "{20104,14301}": "宇宙大麻の生産",
@@ -74,7 +84,22 @@
   "{20104,14501}": "スワンププラントの生産",
   "{20104,14601}": "テラディアニウムの生産",
   "{20104,14701}": "マトリックスソーラーパネル",
+  "{20104,14801}": "スクラフィンの生産",
+  "{20104,14901}": "チェルト肉の生産",
+  "{20104,15001}": "スプリット 医療品の製造",
   "{20104,150101}": "広域センサーアレイ",
+  "{20104,15101}": "コンピュートロニック基材の製造",
+  "{20104,15201}": "テラン エネルギーセルの製造",
+  "{20104,15301}": "テラン 医療品の製造",
+  "{20104,15401}": "マイクロラティスの製造",
+  "{20104,15501}": "テランMREの製造",
+  "{20104,15601}": "プロテインペーストの製造",
+  "{20104,15701}": "炭化ケイ素の生産",
+  "{20104,15801}": "覚せい剤の製造",
+  "{20104,15901}": "ボロン 医療品の製造",
+  "{20104,16001}": "ボーガスの製造",
+  "{20104,16101}": "プランクトンの生産",
+  "{20104,16201}": "ボウフの製造",
   "{20104,20101}": "アルゴン 小型 コンテナ保管庫",
   "{20104,20201}": "アルゴン 中型 コンテナ保管庫",
   "{20104,20301}": "アルゴン 大型 コンテナ保管庫",
@@ -104,6 +129,15 @@
   "{20104,22901}": "テラディ 大型 固体物保管庫",
   "{20104,23301}": "アルゴン 大型 総合保管庫",
   "{20104,24001}": "マトリックス保管庫",
+  "{20104,25101}": "スプリット 小型 コンテナ保管庫",
+  "{20104,25201}": "スプリット 中型 コンテナ保管庫",
+  "{20104,25301}": "スプリット 大型 コンテナ保管庫",
+  "{20104,26101}": "スプリット 小型 液体物保管庫",
+  "{20104,26201}": "スプリット 中型 液体物保管庫",
+  "{20104,26301}": "スプリット 大型 液体物保管庫",
+  "{20104,27101}": "スプリット 小型 固体物保管庫",
+  "{20104,27201}": "スプリット 中型 固体物保管庫",
+  "{20104,27301}": "スプリット 大型 固体物保管庫",
   "{20104,30101}": "アルゴン 小型 居住施設",
   "{20104,30201}": "アルゴン 中型 居住施設",
   "{20104,30301}": "アルゴン 大型 居住施設",
@@ -113,15 +147,32 @@
   "{20104,30701}": "テラディ 小型 バイオーム",
   "{20104,30801}": "テラディ 中型 バイオーム",
   "{20104,30901}": "テラディ 大型 バイオーム",
+  "{20104,31001}": "スプリット 小型 パーラー",
+  "{20104,31101}": "スプリット 中型 パーラー",
+  "{20104,31201}": "スプリット 大型 パーラー",
+  "{20104,31301}": "テラン 小型 住宅",
+  "{20104,31401}": "テラン 中型 住宅",
+  "{20104,31501}": "テラン 大型 住宅",
+  "{20104,31601}": "アルゴン 小型 宿舎",
+  "{20104,31701}": "アルゴン 中型 宿舎",
+  "{20104,31801}": "アルゴン 大型 宿舎",
+  "{20104,31901}": "ボロン 小型 オアシス",
+  "{20104,32001}": "ボロン 中型 オアシス",
+  "{20104,32101}": "ボロン 大型 オアシス",
+  "{20104,32201}": "アルゴン 大型 居住用尖塔",
+  "{20104,32301}": "アルゴン 特大型 居住用尖塔",
   "{20104,40101}": "アルゴン 管理センター",
   "{20104,40201}": "パラニド 管理センター",
   "{20104,40301}": "テラディ 管理センター",
+  "{20104,40401}": "スプリット 管理センター",
   "{20104,40601}": "アルゴン ディスク防衛プラットフォーム",
   "{20104,40701}": "パラニド ディスク防衛プラットフォーム",
   "{20104,40801}": "テラディ ディスク防衛プラットフォーム",
+  "{20104,40901}": "スプリット ディスク防衛プラットフォーム",
   "{20104,41101}": "アルゴン ブリッジ防衛プラットフォーム",
   "{20104,41201}": "パラニド ブリッジ防衛プラットフォーム",
   "{20104,41301}": "テラディ ブリッジ防衛プラットフォーム",
+  "{20104,41401}": "スプリット ブリッジ防衛プラットフォーム",
   "{20104,41601}": "パラニド 派閥中枢",
   "{20104,50101}": "アルゴン 基礎接続構造体 01",
   "{20104,50201}": "アルゴン 基礎接続構造体 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "テラディ 基礎接続構造体 01",
   "{20104,50801}": "テラディ 基礎接続構造体 02",
   "{20104,50901}": "テラディ 基礎接続構造体 03",
+  "{20104,51001}": "スプリット 基礎接続構造体 01",
+  "{20104,51101}": "スプリット 基礎接続構造体 02",
+  "{20104,51201}": "スプリット 基礎接続構造体 03",
   "{20104,51401}": "アルゴン 十字接続構造体 01",
   "{20104,51501}": "パラニド 十字接続構造体 01",
   "{20104,51601}": "パラニド 十字接続構造体 02",
   "{20104,51701}": "パラニド Y字接続構造体 01",
   "{20104,51801}": "テラディ 十字接続構造体 01",
+  "{20104,51901}": "スプリット Y字接続構造体 01",
   "{20104,52101}": "アルゴン 垂直接続構造体 01",
   "{20104,52201}": "アルゴン 垂直接続構造体 02",
   "{20104,52301}": "パラニド 垂直接続構造体 01",
   "{20104,52401}": "パラニド 垂直接続構造体 02",
   "{20104,52501}": "テラディ 垂直接続構造体 01",
   "{20104,52601}": "テラディ 垂直接続構造体 02",
+  "{20104,52701}": "スプリット 垂直接続構造体 01",
+  "{20104,52801}": "スプリット 垂直接続構造体 02",
   "{20104,52901}": "探険 基礎接続構造体 01",
   "{20104,53001}": "探険 基礎接続構造体 02",
   "{20104,53101}": "探険 基礎接続構造体 03",
   "{20104,53201}": "探険 十字接続構造体 01",
   "{20104,53301}": "探険 垂直接続構造体 01",
   "{20104,53401}": "探険 垂直接続構造体 02",
+  "{20104,53501}": "テラン 垂直接続構造体 01",
+  "{20104,53601}": "テラン 垂直接続構造体 02",
+  "{20104,53701}": "テラン 十字接続構造体 01",
+  "{20104,53801}": "テラン 基礎接続構造体 01",
+  "{20104,53901}": "テラン 基礎接続構造体 02",
+  "{20104,54001}": "テラン 基礎接続構造体 03",
+  "{20104,54101}": "ボロン 基礎接続構造体 01",
+  "{20104,54201}": "ボロン 基礎接続構造体 02",
+  "{20104,54301}": "ボロン 基礎接続構造体 03",
+  "{20104,54401}": "ボロン 基礎接続構造体 04",
+  "{20104,54501}": "ボロン 基礎接続構造体 05",
+  "{20104,54601}": "ボロン Y字接続構造体 01",
+  "{20104,54701}": "ボロン 六角接続構造体 01",
+  "{20104,54801}": "ボロン 垂直接続構造体 01",
+  "{20104,54901}": "ボロン 垂直接続構造体 02",
+  "{20104,55101}": "アルゴン アーク接続構造体 02",
+  "{20104,55301}": "アルゴン スパン接続構造体 01",
+  "{20104,55401}": "アルゴン スパン接続構造体 02",
   "{20104,55501}": "アルゴン アーク接続構造体 01",
   "{20104,55601}": "アルゴン 十字接続構造体 03",
   "{20104,55701}": "アルゴン 十字接続構造体 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "特大型艦船組み立てマトリックス",
   "{20104,61301}": "小/中型艦船製造ベイ",
   "{20104,61401}": "小/中型艦船整備ベイ",
+  "{20104,61601}": "テラン 小/中型艦船整備ベイ",
+  "{20104,61701}": "テラン 大型艦船整備ベイ",
+  "{20104,61801}": "テラン 特大型艦船整備ベイ",
+  "{20104,61901}": "テラン 小/中型艦船製造ベイ",
+  "{20104,62001}": "テラン 大型艦船製造ベイ",
+  "{20104,62101}": "テラン 特大型艦船製造ベイ",
+  "{20104,62201}": "ボロン 小/中型艦船整備ベイ",
+  "{20104,62301}": "ボロン 大型艦船整備ベイ",
+  "{20104,62401}": "ボロン 特大型艦船整備ベイ",
+  "{20104,62501}": "ボロン 小/中型艦船製造ベイ",
+  "{20104,62601}": "ボロン 大型艦船製造ベイ",
+  "{20104,62701}": "ボロン 特大型艦船製造ベイ",
   "{20104,70101}": "中型1 小型6 基本 ドックエリア",
   "{20104,70201}": "中型1 小型6 標準 ドックエリア",
   "{20104,70301}": "中型1 小型6 高級 ドックエリア",
@@ -183,9 +270,52 @@
   "{20104,71801}": "テラディ 1-ドック 桟橋",
   "{20104,71901}": "テラディ 3-ドック T 桟橋",
   "{20104,72001}": "テラディ 3-ドック E 桟橋",
+  "{20104,72101}": "スプリット 1-ドック 桟橋",
+  "{20104,72201}": "スプリット 4-ドック T 桟橋",
+  "{20104,72301}": "スプリット 3-ドック E 桟橋",
   "{20104,73301}": "中型8 高級 ドックエリア",
   "{20104,73401}": "アルゴン交易ステーション 1-ドック 桟橋",
+  "{20104,73601}": "テラン 1-ドック 桟橋",
+  "{20104,73701}": "テラン 3-ドック T 桟橋",
+  "{20104,73801}": "テラン 3-ドック E 桟橋",
+  "{20104,73901}": "テラン 4-ドック T 桟橋",
+  "{20104,74001}": "テラン交易ステーション ヘキサドック 桟橋",
+  "{20104,74101}": "テラン 中型4 小型10 高級 ドックエリア",
+  "{20104,74201}": "ボロン 1-ドック 桟橋",
+  "{20104,74301}": "ボロン 4-ドック T 桟橋",
+  "{20104,74401}": "ボロン 3-ドック E 桟橋",
+  "{20104,74501}": "ボロン交易ステーション 4-ドック 桟橋",
+  "{20104,74701}": "ボロン 中型4 小型14 高級 ドックエリア",
+  "{20104,74801}": "ボロン交易ステーション ヘキサドック 桟橋",
   "{20104,74901}": "アルゴン 1-ドック 短 桟橋",
+  "{20104,90101}": "テラン 小型 コンテナ保管庫",
+  "{20104,90201}": "テラン 中型 コンテナ保管庫",
+  "{20104,90301}": "テラン 大型 コンテナ保管庫",
+  "{20104,90401}": "テラン 小型 液体物保管庫",
+  "{20104,90501}": "テラン 中型 液体物保管庫",
+  "{20104,90601}": "テラン 大型 液体物保管庫",
+  "{20104,90701}": "テラン 小型 固体物保管庫",
+  "{20104,90801}": "テラン 中型 固体物保管庫",
+  "{20104,90901}": "テラン 大型 固体物保管庫",
+  "{20104,91701}": "テラン 中型 交易ステーションコンテナ保管庫",
+  "{20104,91901}": "テラン 小型 交易ステーション液体物保管庫",
+  "{20104,92501}": "プロテクティオン シールドジェネレーター",
+  "{20104,92601}": "凝縮物質格納施設",
+  "{20104,92701}": "ボロン 小型 コンテナ保管庫",
+  "{20104,92801}": "ボロン 中型 コンテナ保管庫",
+  "{20104,92901}": "ボロン 大型 コンテナ保管庫",
+  "{20104,93001}": "ボロン 小型 液体物保管庫",
+  "{20104,93101}": "ボロン 中型 液体物保管庫",
+  "{20104,93201}": "ボロン 大型 液体物保管庫",
+  "{20104,93301}": "ボロン 小型 固体物保管庫",
+  "{20104,93401}": "ボロン 中型 固体物保管庫",
+  "{20104,93501}": "ボロン 大型 固体物保管庫",
+  "{20104,95001}": "テラン 管理センター",
+  "{20104,95101}": "テラン ディスク防衛プラットフォーム",
+  "{20104,95201}": "テラン ブリッジ防衛プラットフォーム",
+  "{20104,95301}": "ボロン 管理センター",
+  "{20104,95401}": "ボロン ディスク防衛プラットフォーム",
+  "{20104,95501}": "ボロン ブリッジ防衛プラットフォーム",
   "{20201,101}": "高度電子機器",
   "{20201,1101}": "糧食",
   "{20201,1201}": "船体部品",
@@ -227,11 +357,22 @@
   "{20201,4701}": "水",
   "{20201,4801}": "武器部品",
   "{20201,4901}": "小麦",
+  "{20201,5001}": "チェルト肉",
   "{20201,501}": "クレイトロニクス",
+  "{20201,5101}": "スクラフィンフルーツ",
+  "{20201,6001}": "コンピュートロニック基材",
   "{20201,601}": "ドローン部品",
+  "{20201,6101}": "マイクロラティス",
+  "{20201,6201}": "プロテインペースト",
+  "{20201,6301}": "炭化ケイ素",
+  "{20201,6401}": "覚せい剤",
+  "{20201,6501}": "テランMRE",
   "{20201,6601}": "スクラップメタル",
   "{20201,6801}": "未処理のスクラップ",
   "{20201,701}": "エネルギーセル",
+  "{20201,7101}": "ボウフ",
+  "{20201,7201}": "ボーガス",
+  "{20201,7301}": "プランクトン",
   "{20201,801}": "エンジン部品",
   "{20201,901}": "フィールドコイル"
 }
