--- a/src/assets/game_data/Timelines (7.10)/locales/ko.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/ko.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "고급 전자부품 공장",
   "{20104,102101}": "거주지 링 연결구",
   "{20104,102201}": "거주지 서비스 구역",
+  "{20104,102601}": "드릴 지지 구조물",
+  "{20104,102701}": "드릴 접근 모듈",
+  "{20104,102801}": "방어 기기",
+  "{20104,102901}": "기숙사 모듈",
+  "{20104,103001}": "반원형 기숙사",
   "{20104,10301}": "반물질 전지 공장",
+  "{20104,103101}": "저장소 링",
+  "{20104,103201}": "저장소 팔",
   "{20104,103601}": "펜트하우스 전망대",
   "{20104,103701}": "온실 전망대",
   "{20104,103801}": "파빌리온 전망대",
@@ -35,7 +42,9 @@
   "{20104,10801}": "에너지 셀 공장",
   "{20104,10901}": "엔진 부품 공장",
   "{20104,11001}": "텔라디 엔진 부품 공장",
+  "{20104,110101}": "카지노",
   "{20104,110201}": "갬블링 덴",
+  "{20104,110301}": "페로몬 아트 갤러리",
   "{20104,11101}": "계자 코일 공장",
   "{20104,11201}": "그래핀 공장",
   "{20104,11301}": "선체 부품 공장",
@@ -67,6 +76,7 @@
   "{20104,13801}": "마야 가루 공장",
   "{20104,13901}": "마야 달팽이 공장",
   "{20104,14001}": "소야 콩 공장",
+  "{20104,140101}": "테란 폐품 재활용기",
   "{20104,14101}": "소야 껍데기 공장",
   "{20104,14201}": "노스트롭 기름 공장",
   "{20104,14301}": "대마초 공장",
@@ -74,7 +84,22 @@
   "{20104,14501}": "늪지 식물 공장",
   "{20104,14601}": "텔라디아니움 공장",
   "{20104,14701}": "태양 전지판",
+  "{20104,14801}": "스크루핀 생산",
+  "{20104,14901}": "체르릿 생산",
+  "{20104,15001}": "스플릿 의약품 공장",
   "{20104,150101}": "광역 센서 기기",
+  "{20104,15101}": "컴퓨트로닉 기질 공장",
+  "{20104,15201}": "테란 에너지 셀 공장",
+  "{20104,15301}": "테란 의약품 공장",
+  "{20104,15401}": "미세 금속 격자 공장",
+  "{20104,15501}": "테란 전투식량 공장",
+  "{20104,15601}": "단백질 반죽 공장",
+  "{20104,15701}": "실리콘 카바이드 공장",
+  "{20104,15801}": "각성제 공장",
+  "{20104,15901}": "보론 의약품 공장",
+  "{20104,16001}": "보가스 공장",
+  "{20104,16101}": "플랑크톤 공장",
+  "{20104,16201}": "보푸 공장",
   "{20104,20101}": "아르곤 S 컨테이너 저장소",
   "{20104,20201}": "아르곤 M 컨테이너 저장소",
   "{20104,20301}": "아르곤 L 컨테이너 저장소",
@@ -104,6 +129,15 @@
   "{20104,22901}": "텔라디 L 광물 저장소",
   "{20104,23301}": "아르곤 L 다용도 저장소",
   "{20104,24001}": "다열 저장고",
+  "{20104,25101}": "스플릿 S 컨테이너 저장소",
+  "{20104,25201}": "스플릿 M 컨테이너 저장소",
+  "{20104,25301}": "스플릿 L 컨테이너 저장소",
+  "{20104,26101}": "스플릿 S 액화가스 저장소",
+  "{20104,26201}": "스플릿 M 액화가스 저장소",
+  "{20104,26301}": "스플릿 L 액화가스 저장소",
+  "{20104,27101}": "스플릿 S 광물 저장소",
+  "{20104,27201}": "스플릿 M 광물 저장소",
+  "{20104,27301}": "스플릿 L 광물 저장소",
   "{20104,30101}": "아르곤 S 거주지",
   "{20104,30201}": "아르곤 M 거주지",
   "{20104,30301}": "아르곤 L 거주지",
@@ -113,15 +147,32 @@
   "{20104,30701}": "텔라디 S 거주지",
   "{20104,30801}": "텔라디 M 거주지",
   "{20104,30901}": "텔라디 L 거주지",
+  "{20104,31001}": "스플릿 S 거주지",
+  "{20104,31101}": "스플릿 M 거주지",
+  "{20104,31201}": "스플릿 L 거주지",
+  "{20104,31301}": "테란 S 거주 구역",
+  "{20104,31401}": "테란 M 거주 구역",
+  "{20104,31501}": "테란 L 거주 구역",
+  "{20104,31601}": "아르곤 S 기숙사",
+  "{20104,31701}": "아르곤 M 기숙사",
+  "{20104,31801}": "아르곤 L 기숙사",
+  "{20104,31901}": "보론 S 오아시스",
+  "{20104,32001}": "보론 M 오아시스",
+  "{20104,32101}": "보론 L 오아시스",
+  "{20104,32201}": "아르곤 L 주거지 첨탑",
+  "{20104,32301}": "아르곤 XL 주거지 첨탑",
   "{20104,40101}": "아르곤 행정 센터",
   "{20104,40201}": "파라니드 행정 센터",
   "{20104,40301}": "텔라디 행정 센터",
+  "{20104,40401}": "스플릿 행정 센터",
   "{20104,40601}": "아르곤 원반형 방어 플랫폼",
   "{20104,40701}": "파라니드 원반형 방어 플랫폼",
   "{20104,40801}": "텔라디 원반형 방어 플랫폼",
+  "{20104,40901}": "스플릿 원반형 방어 플랫폼",
   "{20104,41101}": "아르곤 교각형 방어 플랫폼",
   "{20104,41201}": "파라니드 교각형 방어 플랫폼",
   "{20104,41301}": "텔라디 교각형 방어 플랫폼",
+  "{20104,41401}": "스플릿 교각형 방어 플랫폼",
   "{20104,41601}": "파라니드 세력 수도",
   "{20104,50101}": "아르곤 기본 연결 구조물 01",
   "{20104,50201}": "아르곤 기본 연결 구조물 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "텔라디 기본 연결 구조물 01",
   "{20104,50801}": "텔라디 기본 연결 구조물 02",
   "{20104,50901}": "텔라디 기본 연결 구조물 03",
+  "{20104,51001}": "스플릿 기본 연결 구조물 01",
+  "{20104,51101}": "스플릿 기본 연결 구조물 02",
+  "{20104,51201}": "스플릿 기본 연결 구조물 03",
   "{20104,51401}": "아르곤 교차 연결 구조물 01",
   "{20104,51501}": "파라니드 교차 연결 구조물 01",
   "{20104,51601}": "파라니드 교차 연결 구조물 02",
   "{20104,51701}": "파라니드 Y 연결 구조물 01",
   "{20104,51801}": "텔라디 교차 연결 구조물 01",
+  "{20104,51901}": "스플릿 Y 연결 구조물 01",
   "{20104,52101}": "아르곤 수직 연결 구조물 01",
   "{20104,52201}": "아르곤 수직 연결 구조물 02",
   "{20104,52301}": "파라니드 수직 연결 구조물 01",
   "{20104,52401}": "파라니드 수직 연결 구조물 02",
   "{20104,52501}": "텔라디 수직 연결 구조물 01",
   "{20104,52601}": "텔라디 수직 연결 구조물 02",
+  "{20104,52701}": "스플릿 수직 연결 구조물 01",
+  "{20104,52801}": "스플릿 수직 연결 구조물 02",
   "{20104,52901}": "탐험 기본 연결 구조물 01",
   "{20104,53001}": "탐험 기본 연결 구조물 02",
   "{20104,53101}": "탐험 기본 연결 구조물 03",
   "{20104,53201}": "탐험 교차 연결 구조물 01",
   "{20104,53301}": "탐험 수직 연결 구조물 01",
   "{20104,53401}": "탐험 수직 연결 구조물 02",
+  "{20104,53501}": "테란 수직 연결 구조물 01",
+  "{20104,53601}": "테란 수직 연결 구조물 02",
+  "{20104,53701}": "테란 교차 연결 구조물 01",
+  "{20104,53801}": "테란 기본 연결 구조물 01",
+  "{20104,53901}": "테란 기본 연결 구조물 02",
+  "{20104,54001}": "테란 기본 연결 구조물 03",
+  "{20104,54101}": "보론 기본 연결 구조물 01",
+  "{20104,54201}": "보론 기본 연결 구조물 02",
+  "{20104,54301}": "보론 기본 연결 구조물 03",
+  "{20104,54401}": "보론 기본 연결 구조물 04",
+  "{20104,54501}": "보론 기본 연결 구조물 05",
+  "{20104,54601}": "보론 Y 연결 구조물 01",
+  "{20104,54701}": "보론 육각 연결 구조물 01",
+  "{20104,54801}": "보론 수직 연결 구조물 01",
+  "{20104,54901}": "보론 수직 연결 구조물 02",
+  "{20104,55101}": "아르곤 아치형 연결 구조 02",
+  "{20104,55301}": "아르곤 간격형 연결 구조 01",
+  "{20104,55401}": "아르곤 간격형 연결 구조 02",
   "{20104,55501}": "아르곤 아치형 연결 구조 01",
   "{20104,55601}": "아르곤 교차 연결 구조물 03",
   "{20104,55701}": "아르곤 교차 연결 구조물 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "XL급 함선 조립 매트릭스",
   "{20104,61301}": "S/M급 함선 제조소",
   "{20104,61401}": "S/M급 함선 정비소",
+  "{20104,61601}": "테란 S/M급 함선 정비소",
+  "{20104,61701}": "테란 L급 함선 정비소",
+  "{20104,61801}": "테란 XL급 함선 정비소",
+  "{20104,61901}": "테란 S/M급 함선 제조소",
+  "{20104,62001}": "테란 L급 함선 제조소",
+  "{20104,62101}": "테란 XL급 함선 제조소",
+  "{20104,62201}": "보론 S/M급 함선 정비소",
+  "{20104,62301}": "보론 L급 함선 정비소",
+  "{20104,62401}": "보론 XL급 함선 정비소",
+  "{20104,62501}": "보론 S/M급 함선 제조소",
+  "{20104,62601}": "보론 L급 함선 제조소",
+  "{20104,62701}": "보론 XL급 함선 제조소",
   "{20104,70101}": "1M6S 기본형 도크 구역",
   "{20104,70201}": "1M6S 표준형 도크 구역",
   "{20104,70301}": "1M6S 고급형 도크 구역",
@@ -183,9 +270,52 @@
   "{20104,71801}": "텔라디 1-도크 부두",
   "{20104,71901}": "텔라디 3-도크 T 부두",
   "{20104,72001}": "텔라디 3-도크 E 부두",
+  "{20104,72101}": "스플릿 1-도크 부두",
+  "{20104,72201}": "스플릿 4-도크 T 부두",
+  "{20104,72301}": "스플릿 3-도크 E 부두",
   "{20104,73301}": "8M 고급형 도크 구역",
   "{20104,73401}": "아르곤 무역 스테이션 1-도크 부두",
+  "{20104,73601}": "테란 1-도크 부두",
+  "{20104,73701}": "테란 3-도크 T 부두",
+  "{20104,73801}": "테란 3-도크 E 부두",
+  "{20104,73901}": "테란 4-도크 T 부두",
+  "{20104,74001}": "테란 무역 스테이션 헥사-도크 부두",
+  "{20104,74101}": "테란 4M10S 고급형 도크 구역",
+  "{20104,74201}": "보론 1-도크 부두",
+  "{20104,74301}": "보론 4-도크 T 부두",
+  "{20104,74401}": "보론 3-도크 E 부두",
+  "{20104,74501}": "보론 무역 스테이션 4-도크 부두",
+  "{20104,74701}": "보론 4M14S 고급형 도크 구역",
+  "{20104,74801}": "보론 무역 스테이션 헥사-도크 부두",
   "{20104,74901}": "아르곤 1-도크 단선 부두",
+  "{20104,90101}": "테란 S 컨테이너 저장소",
+  "{20104,90201}": "테란 M 컨테이너 저장소",
+  "{20104,90301}": "테란 L 컨테이너 저장소",
+  "{20104,90401}": "테란 S 액화가스 저장소",
+  "{20104,90501}": "테란 M 액화가스 저장소",
+  "{20104,90601}": "테란 L 액화가스 저장소",
+  "{20104,90701}": "테란 S 광물 저장소",
+  "{20104,90801}": "테란 M 광물 저장소",
+  "{20104,90901}": "테란 L 광물 저장소",
+  "{20104,91701}": "테란 M 무역 스테이션 컨테이너 저장소",
+  "{20104,91901}": "테란 S 무역 스테이션 액화가스 저장소",
+  "{20104,92501}": "프로텍티온 보호막 생성기",
+  "{20104,92601}": "응축물 격납 시설",
+  "{20104,92701}": "보론 S 컨테이너 저장소",
+  "{20104,92801}": "보론 M 컨테이너 저장소",
+  "{20104,92901}": "보론 L 컨테이너 저장소",
+  "{20104,93001}": "보론 S 액화가스 저장소",
+  "{20104,93101}": "보론 M 액화가스 저장소",
+  "{20104,93201}": "보론 L 액화가스 저장소",
+  "{20104,93301}": "보론 S 광물 저장소",
+  "{20104,93401}": "보론 M 광물 저장소",
+  "{20104,93501}": "보론 L 광물 저장소",
+  "{20104,95001}": "테란 행정 센터",
+  "{20104,95101}": "테란 원반형 방어 플랫폼",
+  "{20104,95201}": "테란 교각형 방어 플랫폼",
+  "{20104,95301}": "보론 행정 센터",
+  "{20104,95401}": "보론 원반형 방어 플랫폼",
+  "{20104,95501}": "보론 교각형 방어 플랫폼",
   "{20201,101}": "고급 전자부품",
   "{20201,1101}": "배급식량",
   "{20201,1201}": "선체 부품",
@@ -227,11 +357,22 @@
   "{20201,4701}": "물",
   "{20201,4801}": "무기 부품",
   "{20201,4901}": "밀",
+  "{20201,5001}": "체르릿 고기",
   "{20201,501}": "클레이트로닉스",
+  "{20201,5101}": "스크루핀 과일",
+  "{20201,6001}": "컴퓨트로닉 기질",
   "{20201,601}": "드론 부품",
+  "{20201,6101}": "미세 금속 격자",
+  "{20201,6201}": "단백질 반죽",
+  "{20201,6301}": "실리콘 카바이드",
+  "{20201,6401}": "각성제",
+  "{20201,6501}": "테란 전투식량",
   "{20201,6601}": "폐품",
   "{20201,6801}": "고철",
   "{20201,701}": "에너지 셀",
+  "{20201,7101}": "보푸",
+  "{20201,7201}": "보가스",
+  "{20201,7301}": "플랑크톤",
   "{20201,801}": "엔진 부품",
   "{20201,901}": "계자 코일"
 }
