--- a/src/assets/game_data/Timelines (7.10)/locales/pl.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/pl.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "Produkcja elektroniki zaawan.",
   "{20104,102101}": "Kleszcze pierścienia obszaru mieszkalnego",
   "{20104,102201}": "Sekcja usługowa obszaru mieszkalnego",
+  "{20104,102601}": "Konstrukcja wsporna świdra",
+  "{20104,102701}": "Moduł dostępu do świdra",
+  "{20104,102801}": "Macierz obronna",
+  "{20104,102901}": "Moduł bursy",
+  "{20104,103001}": "Półpierścień bursy",
   "{20104,10301}": "Produkcja ogniw antymaterii",
+  "{20104,103101}": "Pierścień magazynu",
+  "{20104,103201}": "Ramię magazynu",
   "{20104,103601}": "Taras widokowy Apartamentu",
   "{20104,103701}": "Taras widokowy Konserwatorium",
   "{20104,103801}": "Taras obserwacyjny pawilonu",
@@ -35,7 +42,9 @@
   "{20104,10801}": "Produkcja ogniw energetycznych",
   "{20104,10901}": "Produkcja części silnikowych",
   "{20104,11001}": "Teladianie Produkcja części silnikowych",
+  "{20104,110101}": "Kasyno",
   "{20104,110201}": "Jaskinia hazardu",
+  "{20104,110301}": "Galeria Sztuki Feromonów",
   "{20104,11101}": "Produkcja cewek",
   "{20104,11201}": "Produkcja grafenu",
   "{20104,11301}": "Produkcja części kadłuba",
@@ -67,6 +76,7 @@
   "{20104,13801}": "Produkcja pyłu Maja",
   "{20104,13901}": "Produkcja ślimaków Maja",
   "{20104,14001}": "Produkcja soi",
+  "{20104,140101}": "Ziemianie Recykler Złomu",
   "{20104,14101}": "Produkcja ziaren soi",
   "{20104,14201}": "Produkcja oleju nostropowego",
   "{20104,14301}": "Produkcja teladihuany",
@@ -74,7 +84,22 @@
   "{20104,14501}": "Produkcja roślin bagiennych",
   "{20104,14601}": "Produkcja teladianium",
   "{20104,14701}": "Matrycowy panel słoneczny",
+  "{20104,14801}": "Produkcja Scruffinów",
+  "{20104,14901}": "Produkcja mięsa czeltów",
+  "{20104,15001}": "Splici Produkcja zaopatrzenia medycznego",
   "{20104,150101}": "Szerokopasmowe matryce czujników",
+  "{20104,15101}": "Produkcja Substancji Syntetycznej",
+  "{20104,15201}": "Ziemianie Produkcja ogniw energetycznych",
+  "{20104,15301}": "Ziemianie Produkcja zaopatrzenia medycznego",
+  "{20104,15401}": "Produkcja metalowych mikrosiateczek",
+  "{20104,15501}": "Produkcja ziemskich MRE",
+  "{20104,15601}": "Produkcja pasty proteinowej",
+  "{20104,15701}": "Produkcja węglanu krzemu",
+  "{20104,15801}": "Produkcja stymulantów",
+  "{20104,15901}": "Boroni Produkcja zaopatrzenia medycznego",
+  "{20104,16001}": "Produkcja BoGazu",
+  "{20104,16101}": "Produkcja Planktonu",
+  "{20104,16201}": "Produkcja BoFu",
   "{20104,20101}": "Argoni S Magazyn kontenerowy",
   "{20104,20201}": "Argoni M Magazyn kontenerowy",
   "{20104,20301}": "Argoni L Magazyn kontenerowy",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Teladianie L Magazyn stały",
   "{20104,23301}": "Argoni L Magazyn uniwersalny",
   "{20104,24001}": "Matryca magazynów",
+  "{20104,25101}": "Splici S Magazyn kontenerowy",
+  "{20104,25201}": "Splici M Magazyn kontenerowy",
+  "{20104,25301}": "Splici L Magazyn kontenerowy",
+  "{20104,26101}": "Splici S Magazyn płynów",
+  "{20104,26201}": "Splici M Magazyn płynów",
+  "{20104,26301}": "Splici L Magazyn płynów",
+  "{20104,27101}": "Splici S Magazyn stały",
+  "{20104,27201}": "Splici M Magazyn stały",
+  "{20104,27301}": "Splici L Magazyn stały",
   "{20104,30101}": "Argoni S Obszar mieszkalny",
   "{20104,30201}": "Argoni M Obszar mieszkalny",
   "{20104,30301}": "Argoni L Obszar mieszkalny",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Teladianie S Biom",
   "{20104,30801}": "Teladianie M Biom",
   "{20104,30901}": "Teladianie L Biom",
+  "{20104,31001}": "Splici S Salon",
+  "{20104,31101}": "Splici M Salon",
+  "{20104,31201}": "Splici L Salon",
+  "{20104,31301}": "Ziemianie S Pomieszczenia mieszkalne",
+  "{20104,31401}": "Ziemianie M Pomieszczenia mieszkalne",
+  "{20104,31501}": "Ziemianie L Pomieszczenia mieszkalne",
+  "{20104,31601}": "Argoni S Bursa",
+  "{20104,31701}": "Argoni M Bursa",
+  "{20104,31801}": "Argoni L Bursa",
+  "{20104,31901}": "Boroni S Oaza",
+  "{20104,32001}": "Boroni M Oaza",
+  "{20104,32101}": "Boroni L Oaza",
+  "{20104,32201}": "Argoni L Iglica mieszkalna",
+  "{20104,32301}": "Argoni XL Iglica mieszkalna",
   "{20104,40101}": "Argoni Centrum administracyjne",
   "{20104,40201}": "Paranidianie Centrum administracyjne",
   "{20104,40301}": "Teladianie Centrum administracyjne",
+  "{20104,40401}": "Splici Centrum administracyjne",
   "{20104,40601}": "Argoni Okrągła platforma obronna",
   "{20104,40701}": "Paranidianie Okrągła platforma obronna",
   "{20104,40801}": "Teladianie Okrągła platforma obronna",
+  "{20104,40901}": "Splici Okrągła platforma obronna",
   "{20104,41101}": "Argoni Mostowa platforma obronna",
   "{20104,41201}": "Paranidianie Mostowa platforma obronna",
   "{20104,41301}": "Teladianie Mostowa platforma obronna",
+  "{20104,41401}": "Splici Mostowa platforma obronna",
   "{20104,41601}": "Paranidianie Stolica frakcji",
   "{20104,50101}": "Argoni Podstawowa struktura łączeniowa 01",
   "{20104,50201}": "Argoni Podstawowa struktura łączeniowa 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Teladianie Podstawowa struktura łączeniowa 01",
   "{20104,50801}": "Teladianie Podstawowa struktura łączeniowa 02",
   "{20104,50901}": "Teladianie Podstawowa struktura łączeniowa 03",
+  "{20104,51001}": "Splici Podstawowa struktura łączeniowa 01",
+  "{20104,51101}": "Splici Podstawowa struktura łączeniowa 02",
+  "{20104,51201}": "Splici Podstawowa struktura łączeniowa 03",
   "{20104,51401}": "Argoni Krzyżakowa struktura łączeniowa 01",
   "{20104,51501}": "Paranidianie Krzyżakowa struktura łączeniowa 01",
   "{20104,51601}": "Paranidianie Krzyżakowa struktura łączeniowa 02",
   "{20104,51701}": "Paranidianie Struktura łączeniowa Y 01",
   "{20104,51801}": "Teladianie Krzyżakowa struktura łączeniowa 01",
+  "{20104,51901}": "Splici Struktura łączeniowa Y 01",
   "{20104,52101}": "Argoni Pionowa struktura łączeniowa 01",
   "{20104,52201}": "Argoni Pionowa struktura łączeniowa 02",
   "{20104,52301}": "Paranidianie Pionowa struktura łączeniowa 01",
   "{20104,52401}": "Paranidianie Pionowa struktura łączeniowa 02",
   "{20104,52501}": "Teladianie Pionowa struktura łączeniowa 01",
   "{20104,52601}": "Teladianie Pionowa struktura łączeniowa 02",
+  "{20104,52701}": "Splici Pionowa struktura łączeniowa 01",
+  "{20104,52801}": "Splici Pionowa struktura łączeniowa 02",
   "{20104,52901}": "Podstawowa struktura łączeniowa Wyprawy 01",
   "{20104,53001}": "Podstawowa struktura łączeniowa Wyprawy 02",
   "{20104,53101}": "Podstawowa struktura łączeniowa Wyprawy 03",
   "{20104,53201}": "Krzyżakowa struktura łączeniowa Wyprawy 01",
   "{20104,53301}": "Pionowa struktura łączeniowa Wyprawy 01",
   "{20104,53401}": "Pionowa struktura łączeniowa Wyprawy 02",
+  "{20104,53501}": "Ziemianie Pionowa struktura łączeniowa 01",
+  "{20104,53601}": "Ziemianie Pionowa struktura łączeniowa 02",
+  "{20104,53701}": "Ziemianie Krzyżakowa struktura łączeniowa 01",
+  "{20104,53801}": "Ziemianie Podstawowa struktura łączeniowa 01",
+  "{20104,53901}": "Ziemianie Podstawowa struktura łączeniowa 02",
+  "{20104,54001}": "Ziemianie Podstawowa struktura łączeniowa 03",
+  "{20104,54101}": "Boroni Podstawowa struktura łączeniowa 01",
+  "{20104,54201}": "Boroni Podstawowa struktura łączeniowa 02",
+  "{20104,54301}": "Boroni Podstawowa struktura łączeniowa 03",
+  "{20104,54401}": "Boroni Podstawowa struktura łączeniowa 04",
+  "{20104,54501}": "Boroni Podstawowa struktura łączeniowa 05",
+  "{20104,54601}": "Boroni Struktura łączeniowa Y 01",
+  "{20104,54701}": "Boroni Hexoidalna struktura łączeniowa 01",
+  "{20104,54801}": "Boroni Pionowa struktura łączeniowa 01",
+  "{20104,54901}": "Boroni Pionowa struktura łączeniowa 02",
+  "{20104,55101}": "Argoni Struktura połączenia łukowego 02",
+  "{20104,55301}": "Argoni Struktura łączeniowa przęsła 01",
+  "{20104,55401}": "Argoni Struktura łączeniowa przęsła 02",
   "{20104,55501}": "Argoni Struktura połączenia łukowego 01",
   "{20104,55601}": "Argoni Krzyżakowa struktura łączeniowa 03",
   "{20104,55701}": "Argoni Krzyżakowa struktura łączeniowa 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "Matryca montażowa statków XL",
   "{20104,61301}": "Zatoka produkcyjna statków S/M",
   "{20104,61401}": "Zatoka serwisowa statków S/M",
+  "{20104,61601}": "Ziemianie Zatoka serwisowa statków S/M",
+  "{20104,61701}": "Ziemianie Zatoka serwisowa statków L",
+  "{20104,61801}": "Ziemianie Zatoka serwisowa statków XL",
+  "{20104,61901}": "Ziemianie Zatoka produkcyjna statków S/M",
+  "{20104,62001}": "Ziemianie Zatoka produkcyjna statków L",
+  "{20104,62101}": "Ziemianie Zatoka produkcyjna statków XL",
+  "{20104,62201}": "Boroni Zatoka serwisowa statków S/M",
+  "{20104,62301}": "Boroni Zatoka serwisowa statków L",
+  "{20104,62401}": "Boroni Zatoka serwisowa statków XL",
+  "{20104,62501}": "Boroni Zatoka produkcyjna statków S/M",
+  "{20104,62601}": "Boroni Zatoka produkcyjna statków L",
+  "{20104,62701}": "Boroni Zatoka produkcyjna statków XL",
   "{20104,70101}": "1M6S Podstawowa strefa dokowania",
   "{20104,70201}": "1M6S Standardowa strefa dokowania",
   "{20104,70301}": "1M6S Luksusowa strefa dokowania",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Teladianie 1-Dok Molo",
   "{20104,71901}": "Teladianie 3-Dok T Molo",
   "{20104,72001}": "Teladianie 3-Dok E Molo",
+  "{20104,72101}": "Splici 1-Dok Molo",
+  "{20104,72201}": "Splici 4-Dok T Molo",
+  "{20104,72301}": "Splici 3-Dok E Molo",
   "{20104,73301}": "8M Luksusowa strefa dokowania",
   "{20104,73401}": "Argońska stacja handlowa 1-Dok Molo",
+  "{20104,73601}": "Ziemianie 1-Dok Molo",
+  "{20104,73701}": "Ziemianie 3-Dok T Molo",
+  "{20104,73801}": "Ziemianie 3-Dok E Molo",
+  "{20104,73901}": "Ziemianie 4-Dok T Molo",
+  "{20104,74001}": "Ziemska stacja handlowa Hexa-Dok Molo",
+  "{20104,74101}": "Ziemianie 4M10S Luksusowa strefa dokowania",
+  "{20104,74201}": "Boroni 1-Dok Molo",
+  "{20104,74301}": "Boroni 4-Dok T Molo",
+  "{20104,74401}": "Boroni 3-Dok E Molo",
+  "{20104,74501}": "Borońska stacja handlowa 4-Dok Molo",
+  "{20104,74701}": "Boroni 4M14S Luksusowa strefa dokowania",
+  "{20104,74801}": "Borońska stacja handlowa Hexa-Dok Molo",
   "{20104,74901}": "Argoni Krótki 1-Dok Molo",
+  "{20104,90101}": "Ziemianie S Magazyn kontenerowy",
+  "{20104,90201}": "Ziemianie M Magazyn kontenerowy",
+  "{20104,90301}": "Ziemianie L Magazyn kontenerowy",
+  "{20104,90401}": "Ziemianie S Magazyn płynów",
+  "{20104,90501}": "Ziemianie M Magazyn płynów",
+  "{20104,90601}": "Ziemianie L Magazyn płynów",
+  "{20104,90701}": "Ziemianie S Magazyn stały",
+  "{20104,90801}": "Ziemianie M Magazyn stały",
+  "{20104,90901}": "Ziemianie L Magazyn stały",
+  "{20104,91701}": "Ziemianie M Kontener magazynowy Stacji Handlowej",
+  "{20104,91901}": "Ziemianie S Magazyn płynów Stacji Handlowej",
+  "{20104,92501}": "Protektyronowy Generator osłon",
+  "{20104,92601}": "Fabryka zbiorników kondensatu",
+  "{20104,92701}": "Boroni S Magazyn kontenerowy",
+  "{20104,92801}": "Boroni M Magazyn kontenerowy",
+  "{20104,92901}": "Boroni L Magazyn kontenerowy",
+  "{20104,93001}": "Boroni S Magazyn płynów",
+  "{20104,93101}": "Boroni M Magazyn płynów",
+  "{20104,93201}": "Boroni L Magazyn płynów",
+  "{20104,93301}": "Boroni S Magazyn stały",
+  "{20104,93401}": "Boroni M Magazyn stały",
+  "{20104,93501}": "Boroni L Magazyn stały",
+  "{20104,95001}": "Ziemianie Centrum administracyjne",
+  "{20104,95101}": "Ziemianie Okrągła platforma obronna",
+  "{20104,95201}": "Ziemianie Mostowa platforma obronna",
+  "{20104,95301}": "Boroni Centrum administracyjne",
+  "{20104,95401}": "Boroni Okrągła platforma obronna",
+  "{20104,95501}": "Boroni Mostowa platforma obronna",
   "{20201,101}": "Elektronika zaawan.",
   "{20201,1101}": "Racje żywieniowe",
   "{20201,1201}": "Części kadłuba",
@@ -227,11 +357,22 @@
   "{20201,4701}": "Woda",
   "{20201,4801}": "Komponenty broni",
   "{20201,4901}": "Pszenica",
+  "{20201,5001}": "Mięso czeltów",
   "{20201,501}": "Claytronika",
+  "{20201,5101}": "Owoce scruffinów",
+  "{20201,6001}": "Substancja syntetyczna",
   "{20201,601}": "Komponenty drona",
+  "{20201,6101}": "Metalowa mikrosiateczka",
+  "{20201,6201}": "Pasta proteinowa",
+  "{20201,6301}": "Węglan krzemu",
+  "{20201,6401}": "Stymulanty",
+  "{20201,6501}": "Ziemskie MRE",
   "{20201,6601}": "Metal złomowy",
   "{20201,6801}": "Surowy złom",
   "{20201,701}": "Ogniwa energetyczne",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "BoGaz",
+  "{20201,7301}": "Plankton",
   "{20201,801}": "Części silnika",
   "{20201,901}": "Cewki"
 }
