--- a/src/assets/game_data/Timelines (7.10)/locales/pt-BR.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/pt-BR.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "Prod. de Eletrônicos Avançados",
   "{20104,102101}": "Grampo do Anel de Habitat",
   "{20104,102201}": "Seção de Serviços do Habitat",
+  "{20104,102601}": "Estrutura de Suporte de Perfuratriz",
+  "{20104,102701}": "Módulo de Acesso da Perfuratriz",
+  "{20104,102801}": "Arranjo de Defesa",
+  "{20104,102901}": "Módulo de Dormitório",
+  "{20104,103001}": "Dormitório em semicírculo",
   "{20104,10301}": "Prod. de Célula de Antimatéria",
+  "{20104,103101}": "Círculo de Armazenamento",
+  "{20104,103201}": "Braço de Armazenamento",
   "{20104,103601}": "Deck de Observação na Cobertura.",
   "{20104,103701}": "Deck de Observação do Conservatório",
   "{20104,103801}": "Deck de Observação do Pavilhão",
@@ -35,7 +42,9 @@
   "{20104,10801}": "Prod. de Célula de Energia",
   "{20104,10901}": "Prod. de Peças de Motor",
   "{20104,11001}": "Prod. de Peças de Motor Teladi",
+  "{20104,110101}": "Cassino",
   "{20104,110201}": "Covil de Apostas",
+  "{20104,110301}": "Academia de Arte de Feromônio",
   "{20104,11101}": "Prod. de Bobina de Campo",
   "{20104,11201}": "Prod. de Grafeno",
   "{20104,11301}": "Prod. de Partes do Casco",
@@ -67,6 +76,7 @@
   "{20104,13801}": "Prod. de Poeira de Maja",
   "{20104,13901}": "Prod. de Lesma Maja",
   "{20104,14001}": "Prod. de Grãos de Soja",
+  "{20104,140101}": "Reciclador de Sucata Terrestre",
   "{20104,14101}": "Prod. de Palha de Soja",
   "{20104,14201}": "Prod. de Óleo de Nostrop",
   "{20104,14301}": "Prod. de Erva Espacial",
@@ -74,7 +84,22 @@
   "{20104,14501}": "Prod. de Planta Swamp",
   "{20104,14601}": "Prod. de Teladianium",
   "{20104,14701}": "Painel de Matriz Solar",
+  "{20104,14801}": "Produção de Scruffin",
+  "{20104,14901}": "Produção de Chelt",
+  "{20104,15001}": "Produção de Suprimentos Médicos Split",
   "{20104,150101}": "Matriz de Sensores de Área Ampla",
+  "{20104,15101}": "Prod. Substrato Computrônico",
+  "{20104,15201}": "Terrestre Prod. de Célula de Energia",
+  "{20104,15301}": "Terrestre Produção de Suprimentos Médicos",
+  "{20104,15401}": "Prod. Microlátula Metálica",
+  "{20104,15501}": "Produção de MRE Terrestre",
+  "{20104,15601}": "Prod. Pasta de Proteína",
+  "{20104,15701}": "Prod. Carbeto de Silício",
+  "{20104,15801}": "Produção de Estimulantes",
+  "{20104,15901}": "Produção de Suprimentos Médicos Boron",
+  "{20104,16001}": "Produção de BoGas",
+  "{20104,16101}": "Produção de Plâncton",
+  "{20104,16201}": "Produção de BoFu",
   "{20104,20101}": "Contêiner de ArmazenamentoArgon PP",
   "{20104,20201}": "Contêiner de ArmazenamentoArgon M",
   "{20104,20301}": "Contêiner de ArmazenamentoArgon G",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Armazenamento de Sólidos Teladi G",
   "{20104,23301}": "Armazenamento Universal Argon G",
   "{20104,24001}": "Armazenamento Matriz",
+  "{20104,25101}": "Split PP Contêiner de Armazenamento",
+  "{20104,25201}": "Split M Contêiner de Armazenamento",
+  "{20104,25301}": "Split G Contêiner de Armazenamento",
+  "{20104,26101}": "Split PP Armazenamento de Líquidos",
+  "{20104,26201}": "Split M Armazenamento de Líquidos",
+  "{20104,26301}": "Split G Armazenamento de Líquidos",
+  "{20104,27101}": "Split PP Armazenamento de Sólidos",
+  "{20104,27201}": "Split M Armazenamento de Sólidos",
+  "{20104,27301}": "Split G Armazenamento de Sólidos",
   "{20104,30101}": "Habitat Argon PP",
   "{20104,30201}": "Habitat Argon M",
   "{20104,30301}": "Habitat Argon G",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Bioma Teladi PP",
   "{20104,30801}": "Bioma Teladi M",
   "{20104,30901}": "Bioma Teladi G",
+  "{20104,31001}": "Salão Split PP",
+  "{20104,31101}": "Salão Split M",
+  "{20104,31201}": "Salão Split G",
+  "{20104,31301}": "Terrestre PP Alojamentos",
+  "{20104,31401}": "Terrestre M Alojamentos",
+  "{20104,31501}": "Terrestre G Alojamentos",
+  "{20104,31601}": "Dormitório PP Argon",
+  "{20104,31701}": "Dormitório M Argon",
+  "{20104,31801}": "Dormitório G Argon",
+  "{20104,31901}": "Oasis PP Boron",
+  "{20104,32001}": "Oasis M Boron",
+  "{20104,32101}": "Oasis G Boron",
+  "{20104,32201}": "Torre de Habitação Argon G",
+  "{20104,32301}": "Torre de Habitação Argon GG",
   "{20104,40101}": "Centro Administrativo Argon",
   "{20104,40201}": "Centro Administrativo Paranid",
   "{20104,40301}": "Centro Administrativo Teladi",
+  "{20104,40401}": "Centro Administrativo Split",
   "{20104,40601}": "Plataforma de Defesa de Disco Argon",
   "{20104,40701}": "Plataforma de Defesa de Disco Paranid",
   "{20104,40801}": "Plataforma de Defesa de Disco Teladi",
+  "{20104,40901}": "Plataforma de Defesa de Disco Split",
   "{20104,41101}": "Plataforma de Defesa de Ponte Argon",
   "{20104,41201}": "Plataforma de Defesa de Ponte Paranid",
   "{20104,41301}": "Plataforma de Defesa de Ponte Teladi",
+  "{20104,41401}": "Plataforma de Defesa de Ponte Split",
   "{20104,41601}": "Paranid Capital da Facção",
   "{20104,50101}": "Estrutura de Conexão de Base 01 Argon",
   "{20104,50201}": "Estrutura de Conexão de Base 02 Argon",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Estrutura de Conexão de Base 01 Teladi",
   "{20104,50801}": "Estrutura de Conexão de Base 02 Teladi",
   "{20104,50901}": "Estrutura de Conexão de Base 03 Teladi",
+  "{20104,51001}": "Estrutura de Conexão de Base 01 Split",
+  "{20104,51101}": "Estrutura de Conexão de Base 02 Split",
+  "{20104,51201}": "Estrutura de Conexão de Base 03 Split",
   "{20104,51401}": "Estrutura de Conexão de Cruz 01 Argon",
   "{20104,51501}": "Estrutura de Conexão de Cruz 01 Paranid",
   "{20104,51601}": "Estrutura de Conexão de Cruz 02 Paranid",
   "{20104,51701}": "Conexão de Estrutura em Y Paranid 01",
   "{20104,51801}": "Estrutura de Conexão de Cruz 01 Teladi",
+  "{20104,51901}": "Conexão de Estrutura em Y Split 01",
   "{20104,52101}": "Estrutura de Conexão Vertical 01 Argon",
   "{20104,52201}": "Estrutura de Conexão Vertical 02 Argon",
   "{20104,52301}": "Estrutura de Conexão Vertical 01 Paranid",
   "{20104,52401}": "Estrutura de Conexão Vertical Paranid 02",
   "{20104,52501}": "Estrutura de Conexão Vertical Teladi 01",
   "{20104,52601}": "Estrutura de Conexão Vertical Teladi 02",
+  "{20104,52701}": "Estrutura de Conexão Vertical Split 01",
+  "{20104,52801}": "Estrutura de Conexão Vertical Split 02",
   "{20104,52901}": "Estrutura de Conexão de Base Aventura 01",
   "{20104,53001}": "Estrutura de Conexão de Base Aventura 02",
   "{20104,53101}": "Estrutura de Conexão de Base Aventura 03",
   "{20104,53201}": "Estrutura de Conexão de Cruz Aventura 01",
   "{20104,53301}": "Estrutura de Conexão Vertical Aventura 01",
   "{20104,53401}": "Estrutura de Conexão Vertical Aventura 02",
+  "{20104,53501}": "Terrestre Estrutura de Conexão Vertical 01",
+  "{20104,53601}": "Terrestre Estrutura de Conexão Vertical 02",
+  "{20104,53701}": "Terrestre Estrutura de Conexão de Cruz 01",
+  "{20104,53801}": "Terrestre Estrutura de Conexão de Base 01",
+  "{20104,53901}": "Terrestre Estrutura de Conexão de Base 02",
+  "{20104,54001}": "Terrestre Estrutura de Conexão de Base 03",
+  "{20104,54101}": "Estrutura de Conexão de Base 01 Boron",
+  "{20104,54201}": "Estrutura de Conexão de Base 02 Boron",
+  "{20104,54301}": "Estrutura de Conexão de Base 03 Boron",
+  "{20104,54401}": "Estrutura de Conexão de Base 04 Boron",
+  "{20104,54501}": "Estrutura de Conexão de Base 05 Boron",
+  "{20104,54601}": "Conexão de Estrutura em Y Boron 01",
+  "{20104,54701}": "Estrutura de Conexão Hexagonal Boron 01",
+  "{20104,54801}": "Estrutura de Conexão Vertical 01 Boron",
+  "{20104,54901}": "Estrutura de Conexão Vertical 02 Boron",
+  "{20104,55101}": "Estrutura de Conexão em Arco Argon",
+  "{20104,55301}": "Estrutura de Conexão em Vão Argon 01",
+  "{20104,55401}": "Estrutura de Conexão em Vão Argon 02",
   "{20104,55501}": "Estrutura de Conexão em Arco Argon 01",
   "{20104,55601}": "Estrutura de Conexão de Cruz Argon 03",
   "{20104,55701}": "Estrutura de Conexão de Cruz Argon 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "Matriz de Montagem Nave GG",
   "{20104,61301}": "Área de Fabricação de Nave P/M",
   "{20104,61401}": "Oficina de Manutenção Nave P/M",
+  "{20104,61601}": "Oficina de Manutenção Nave P/M Terrestre",
+  "{20104,61701}": "Oficina de Manutenção Nave G Terrestre",
+  "{20104,61801}": "Oficina de Manutenção Nave GG Terrestre",
+  "{20104,61901}": "Área de Fabricação de Nave P/M Terrestre",
+  "{20104,62001}": "Área de Fabricação de Naves G Terrestre",
+  "{20104,62101}": "Área de Fabricação de Naves GG Terrestre",
+  "{20104,62201}": "Oficina de Manutenção Nave P/M Boron",
+  "{20104,62301}": "Oficina de Manutenção Nave G Boron",
+  "{20104,62401}": "Oficina de Manutenção Nave GG Boron",
+  "{20104,62501}": "Área de Fabricação de Nave P/M Boron",
+  "{20104,62601}": "Área de Fabricação de Naves G Boron",
+  "{20104,62701}": "Área de Fabricação de Naves GG Boron",
   "{20104,70101}": "Área de Pouso 1M6P Básico",
   "{20104,70201}": "Área de Pouso 1M6P Padrão",
   "{20104,70301}": "Área de Pouso 1M6P Luxo",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Píer 1-Doca Teladi",
   "{20104,71901}": "Píer 3-Doca T Teladi",
   "{20104,72001}": "Píer 3-Doca E Teladi",
+  "{20104,72101}": "Píer 1-Doca Split",
+  "{20104,72201}": "Píer 4-Doca T Split",
+  "{20104,72301}": "Píer 3-Doca E Split",
   "{20104,73301}": "Área de Pouso 8M Luxo",
   "{20104,73401}": "Estação Comercial Argon 1-Doca Píer",
+  "{20104,73601}": "Terrestre 1-Doca Píer",
+  "{20104,73701}": "3-Doca T Píer Terrestre",
+  "{20104,73801}": "3-Doca E Píer Terrestre",
+  "{20104,73901}": "Terrestre 4-Doca T Píer",
+  "{20104,74001}": "Estação de Comércio Terrestre Hexadoca Píer",
+  "{20104,74101}": "Área de Pouso Luxo 4M10P Terrestre",
+  "{20104,74201}": "1-Doca Píer Boron",
+  "{20104,74301}": "4-Doca T Píer Boron",
+  "{20104,74401}": "3-Doca E Píer Boron",
+  "{20104,74501}": "4-Doca Píer Estação Comercial Boron",
+  "{20104,74701}": "Área de Pouso Luxo 4M14S Boron",
+  "{20104,74801}": "Píer Hexadoca Estação Comercial Boron",
   "{20104,74901}": "Píer 1-Doca Curta Argon",
+  "{20104,90101}": "Terrestre PP Contêiner de Armazenamento",
+  "{20104,90201}": "Terrestre M Contêiner de Armazenamento",
+  "{20104,90301}": "Terrestre G Contêiner de Armazenamento",
+  "{20104,90401}": "Terrestre PP Armazenamento de Líquidos",
+  "{20104,90501}": "Terrestre M Armazenamento de Líquidos",
+  "{20104,90601}": "Terrestre G Armazenamento de Líquidos",
+  "{20104,90701}": "Terrestre PP Armazenamento de Sólidos",
+  "{20104,90801}": "Terrestre M Armazenamento de Sólidos",
+  "{20104,90901}": "Terrestre G Armazenamento de Sólidos",
+  "{20104,91701}": "Terrestre M Armaz. Contêiner Est. Comercial",
+  "{20104,91901}": "Terrestre PP Armaz. Líquido Est. Comercial",
+  "{20104,92501}": "Gerador de Escudo Proteção",
+  "{20104,92601}": "Instalação de Contenção de Condensado",
+  "{20104,92701}": "Contêiner de Armazenamento PP Boron",
+  "{20104,92801}": "Contêiner de Armazenamento M Boron",
+  "{20104,92901}": "Contêiner de Armazenamento G Boron",
+  "{20104,93001}": "Armazenamento de Líquidos PP Boron",
+  "{20104,93101}": "Armazenamento de Líquidos M Boron",
+  "{20104,93201}": "Armazenamento de Líquidos G Boron",
+  "{20104,93301}": "Armazenamento de Sólidos PP Boron",
+  "{20104,93401}": "Armazenamento de Sólidos M Boron",
+  "{20104,93501}": "Armazenamento de Sólidos G Boron",
+  "{20104,95001}": "Terrestre Centro Administrativo",
+  "{20104,95101}": "Terrestre Plataforma de Defesa de Disco",
+  "{20104,95201}": "Terrestre Plataforma de Defesa de Ponte",
+  "{20104,95301}": "Centro Administrativo Boron",
+  "{20104,95401}": "Plataforma de Defesa de Disco Boron",
+  "{20104,95501}": "Plataforma de Defesa de Ponte Boron",
   "{20201,101}": "Eletrônicos Avançados",
   "{20201,1101}": "Rações Alimentares",
   "{20201,1201}": "Partes de Casco",
@@ -227,11 +357,22 @@
   "{20201,4701}": "Água",
   "{20201,4801}": "Componentes de Armas",
   "{20201,4901}": "Trigo",
+  "{20201,5001}": "Carne de Chelt",
   "{20201,501}": "Claytrônicos",
+  "{20201,5101}": "Fruta Scruffin",
+  "{20201,6001}": "Substrato Computrônico",
   "{20201,601}": "Componentes de Drones",
+  "{20201,6101}": "Microtrama Metálica",
+  "{20201,6201}": "Pasta de Proteínas",
+  "{20201,6301}": "Carbeto de Silício",
+  "{20201,6401}": "Estimulantes",
+  "{20201,6501}": "MRE Terrestre",
   "{20201,6601}": "Metal Sucateado",
   "{20201,6801}": "Sucata Bruta",
   "{20201,701}": "Células de Energia",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "BoGas",
+  "{20201,7301}": "Plankton",
   "{20201,801}": "Peças de Motor",
   "{20201,901}": "Bobinas de Campo"
 }
