--- a/src/assets/game_data/Timelines (7.10)/locales/zh-CN.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/zh-CN.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "先进电子设备产线",
   "{20104,102101}": "栖息地环加固结构",
   "{20104,102201}": "栖息地服务区",
+  "{20104,102601}": "钻机辅助设施",
+  "{20104,102701}": "钻机入口模块",
+  "{20104,102801}": "防御阵列",
+  "{20104,102901}": "宿舍模块",
+  "{20104,103001}": "半环宿舍",
   "{20104,10301}": "反物质单元产线",
+  "{20104,103101}": "仓储环",
+  "{20104,103201}": "仓储臂",
   "{20104,103601}": "观景天台",
   "{20104,103701}": "横向观景平台",
   "{20104,103801}": "纵向观景平台",
@@ -35,7 +42,9 @@
   "{20104,10801}": "能量电池产线",
   "{20104,10901}": "引擎部件产线",
   "{20104,11001}": "Teladi 引擎部件产线",
+  "{20104,110101}": "赌场",
   "{20104,110201}": "娱乐室",
+  "{20104,110301}": "信息素艺术展览馆",
   "{20104,11101}": "励磁线圈产线",
   "{20104,11201}": "石墨烯生产线",
   "{20104,11301}": "船体部件产线",
@@ -67,6 +76,7 @@
   "{20104,13801}": "艳耀星尘产线",
   "{20104,13901}": "艳耀蜗牛产线",
   "{20104,14001}": "白豆产线",
+  "{20104,140101}": "Terran 废料再生设施",
   "{20104,14101}": "白豆荚产线",
   "{20104,14201}": "滋养油产线",
   "{20104,14301}": "太空烟草产线",
@@ -74,7 +84,22 @@
   "{20104,14501}": "沼泽植物产线",
   "{20104,14601}": "T材料产线",
   "{20104,14701}": "矩阵太阳能面板",
+  "{20104,14801}": "颈鳍果产线",
+  "{20104,14901}": "钳鱼产线",
+  "{20104,15001}": "Split 医疗物资产线",
   "{20104,150101}": "广域传感器阵列",
+  "{20104,15101}": "电子基质生产线",
+  "{20104,15201}": "Terran 能量电池产线",
+  "{20104,15301}": "Terran 医疗物资产线",
+  "{20104,15401}": "金属微晶产线",
+  "{20104,15501}": "地球即食餐产线",
+  "{20104,15601}": "蛋白糊产线",
+  "{20104,15701}": "碳化硅产线",
+  "{20104,15801}": "兴奋剂产线",
+  "{20104,15901}": "Boron 医疗物资产线",
+  "{20104,16001}": "Bo气产线",
+  "{20104,16101}": "浮游生物产线",
+  "{20104,16201}": "Bo腐产线",
   "{20104,20101}": "Argon S 集装仓储",
   "{20104,20201}": "Argon M 集装仓储",
   "{20104,20301}": "Argon L 集装仓储",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Teladi L 固体仓储",
   "{20104,23301}": "Argon L 通用仓储",
   "{20104,24001}": "矩阵仓储",
+  "{20104,25101}": "Split S 集装仓储",
+  "{20104,25201}": "Split M 集装仓储",
+  "{20104,25301}": "Split L 集装仓储",
+  "{20104,26101}": "Split S 液体仓储",
+  "{20104,26201}": "Split M 液体仓储",
+  "{20104,26301}": "Split L 液体仓储",
+  "{20104,27101}": "Split S 固体仓储",
+  "{20104,27201}": "Split M 固体仓储",
+  "{20104,27301}": "Split L 固体仓储",
   "{20104,30101}": "Argon S 居住区",
   "{20104,30201}": "Argon M 居住区",
   "{20104,30301}": "Argon L 居住区",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Teladi S 生物群落",
   "{20104,30801}": "Teladi M 生物群落",
   "{20104,30901}": "Teladi L 生物群落",
+  "{20104,31001}": "Split S 客厅",
+  "{20104,31101}": "Split M 客厅",
+  "{20104,31201}": "Split L 客厅",
+  "{20104,31301}": "Terran S 生活舱室",
+  "{20104,31401}": "Terran M 生活舱室",
+  "{20104,31501}": "Terran L 生活舱室",
+  "{20104,31601}": "Argon S 宿舍",
+  "{20104,31701}": "Argon M 宿舍",
+  "{20104,31801}": "Argon L 宿舍",
+  "{20104,31901}": "Boron S 绿洲",
+  "{20104,32001}": "Boron M 绿洲",
+  "{20104,32101}": "Boron L 绿洲",
+  "{20104,32201}": "Argon L 房屋尖顶",
+  "{20104,32301}": "Argon XL 房屋尖顶",
   "{20104,40101}": "Argon 管理中心",
   "{20104,40201}": "Paranid 管理中心",
   "{20104,40301}": "Teladi 管理中心",
+  "{20104,40401}": "Split 管理中心",
   "{20104,40601}": "Argon 碟型防御平台",
   "{20104,40701}": "Paranid 碟型防御平台",
   "{20104,40801}": "Teladi 碟型防御平台",
+  "{20104,40901}": "Split 碟型防御平台",
   "{20104,41101}": "Argon 桥型防御平台",
   "{20104,41201}": "Paranid 桥型防御平台",
   "{20104,41301}": "Teladi 桥型防御平台",
+  "{20104,41401}": "Split 桥型防御平台",
   "{20104,41601}": "Paranid 势力首都",
   "{20104,50101}": "Argon 基础连接结构 01",
   "{20104,50201}": "Argon 基础连接结构 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Teladi 基础连接结构 01",
   "{20104,50801}": "Teladi 基础连接结构 02",
   "{20104,50901}": "Teladi 基础连接结构 03",
+  "{20104,51001}": "Split 基础连接结构 01",
+  "{20104,51101}": "Split 基础连接结构 02",
+  "{20104,51201}": "Split 基础连接结构 03",
   "{20104,51401}": "Argon 交叉连接结构 01",
   "{20104,51501}": "Paranid 交叉连接结构 01",
   "{20104,51601}": "Paranid 交叉连接结构 02",
   "{20104,51701}": "Paranid Y 型连接结构 01",
   "{20104,51801}": "Teladi 交叉连接结构 01",
+  "{20104,51901}": "Split Y 型连接结构 01",
   "{20104,52101}": "Argon 垂直连接结构 01",
   "{20104,52201}": "Argon 垂直连接结构 02",
   "{20104,52301}": "Paranid 垂直连接结构 01",
   "{20104,52401}": "Paranid 垂直连接结构 02",
   "{20104,52501}": "Teladi 垂直连接结构 01",
   "{20104,52601}": "Teladi 垂直连接结构 02",
+  "{20104,52701}": "Split 垂直连接结构 01",
+  "{20104,52801}": "Split 垂直连接结构 02",
   "{20104,52901}": "远征 基础连接结构 01",
   "{20104,53001}": "远征 基础连接结构 02",
   "{20104,53101}": "远征 基础连接结构 03",
   "{20104,53201}": "远征 交叉连接结构 01",
   "{20104,53301}": "远征 垂直连接结构 01",
   "{20104,53401}": "远征 垂直连接结构 02",
+  "{20104,53501}": "Terran 垂直连接结构 01",
+  "{20104,53601}": "Terran 垂直连接结构 02",
+  "{20104,53701}": "Terran 交叉连接结构 01",
+  "{20104,53801}": "Terran 基础连接结构 01",
+  "{20104,53901}": "Terran 基础连接结构 02",
+  "{20104,54001}": "Terran 基础连接结构 03",
+  "{20104,54101}": "Boron 基础连接结构 01",
+  "{20104,54201}": "Boron 基础连接结构 02",
+  "{20104,54301}": "Boron 基础连接结构 03",
+  "{20104,54401}": "Boron 基础连接结构 04",
+  "{20104,54501}": "Boron 基础连接结构 05",
+  "{20104,54601}": "Boron Y 型连接结构 01",
+  "{20104,54701}": "Boron 六角连接结构 01",
+  "{20104,54801}": "Boron 垂直连接结构 01",
+  "{20104,54901}": "Boron 垂直连接结构 02",
+  "{20104,55101}": "Argon 圆弧连接结构 02",
+  "{20104,55301}": "Argon 跨接结构 01",
+  "{20104,55401}": "Argon 跨接结构 02",
   "{20104,55501}": "Argon 圆弧连接结构 01",
   "{20104,55601}": "Argon 交叉连接结构 03",
   "{20104,55701}": "Argon 交叉连接结构 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "XL级飞船装配矩阵",
   "{20104,61301}": "S/M级飞船制造港",
   "{20104,61401}": "S/M级飞船维护港",
+  "{20104,61601}": "Terran S/M级飞船维护港",
+  "{20104,61701}": "Terran L级飞船维护港",
+  "{20104,61801}": "Terran XL级飞船维护港",
+  "{20104,61901}": "Terran S/M级飞船制造港",
+  "{20104,62001}": "Terran L级飞船制造港",
+  "{20104,62101}": "Terran XL级飞船制造港",
+  "{20104,62201}": "Boron S/M级飞船维护港",
+  "{20104,62301}": "Boron L级飞船维护港",
+  "{20104,62401}": "Boron XL级飞船维护港",
+  "{20104,62501}": "Boron S/M级飞船制造港",
+  "{20104,62601}": "Boron L级飞船制造港",
+  "{20104,62701}": "Boron XL级飞船制造港",
   "{20104,70101}": "1M6S 基础 停靠区",
   "{20104,70201}": "1M6S 标准 停靠区",
   "{20104,70301}": "1M6S 豪华 停靠区",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Teladi 1x大型泊位 码头",
   "{20104,71901}": "Teladi T型-3x大型泊位 码头",
   "{20104,72001}": "Teladi E型-3x大型泊位 码头",
+  "{20104,72101}": "Split 1x大型泊位 码头",
+  "{20104,72201}": "Split T型-4x大型泊位 码头",
+  "{20104,72301}": "Split E型-3x大型泊位 码头",
   "{20104,73301}": "8M 豪华 停靠区",
   "{20104,73401}": "Argon贸易空间站 1x大型泊位 码头",
+  "{20104,73601}": "Terran 1x大型泊位 码头",
+  "{20104,73701}": "Terran T型-3x大型泊位 码头",
+  "{20104,73801}": "Terran E型-3x大型泊位 码头",
+  "{20104,73901}": "Terran T型-4x大型泊位 码头",
+  "{20104,74001}": "Terran贸易空间站 六角大型泊位 码头",
+  "{20104,74101}": "Terran 4M10S 豪华 停靠区",
+  "{20104,74201}": "Boron 1x大型泊位 码头",
+  "{20104,74301}": "Boron T型-4x大型泊位 码头",
+  "{20104,74401}": "Boron E型-3x大型泊位 码头",
+  "{20104,74501}": "Boron贸易空间站 4x大型泊位 码头",
+  "{20104,74701}": "Boron 4M14S 豪华 停靠区",
+  "{20104,74801}": "Boron贸易空间站 六角大型泊位 码头",
   "{20104,74901}": "Argon 紧缩型-1x大型泊位 码头",
+  "{20104,90101}": "Terran S 集装仓储",
+  "{20104,90201}": "Terran M 集装仓储",
+  "{20104,90301}": "Terran L 集装仓储",
+  "{20104,90401}": "Terran S 液体仓储",
+  "{20104,90501}": "Terran M 液体仓储",
+  "{20104,90601}": "Terran L 液体仓储",
+  "{20104,90701}": "Terran S 固体仓储",
+  "{20104,90801}": "Terran M 固体仓储",
+  "{20104,90901}": "Terran L 固体仓储",
+  "{20104,91701}": "Terran M 贸易空间站集装仓储",
+  "{20104,91901}": "Terran S 贸易空间站液体仓储",
+  "{20104,92501}": "戍子护盾发生器",
+  "{20104,92601}": "冷凝态封装厂",
+  "{20104,92701}": "Boron S 集装仓储",
+  "{20104,92801}": "Boron M 集装仓储",
+  "{20104,92901}": "Boron L 集装仓储",
+  "{20104,93001}": "Boron S 液体仓储",
+  "{20104,93101}": "Boron M 液体仓储",
+  "{20104,93201}": "Boron L 液体仓储",
+  "{20104,93301}": "Boron S 固体仓储",
+  "{20104,93401}": "Boron M 固体仓储",
+  "{20104,93501}": "Boron L 固体仓储",
+  "{20104,95001}": "Terran 管理中心",
+  "{20104,95101}": "Terran 碟型防御平台",
+  "{20104,95201}": "Terran 桥型防御平台",
+  "{20104,95301}": "Boron 管理中心",
+  "{20104,95401}": "Boron 碟型防御平台",
+  "{20104,95501}": "Boron 桥型防御平台",
   "{20201,101}": "先进电子设备",
   "{20201,1101}": "食品配给",
   "{20201,1201}": "船体部件",
@@ -227,11 +357,22 @@
   "{20201,4701}": "水",
   "{20201,4801}": "武器部件",
   "{20201,4901}": "小麦",
+  "{20201,5001}": "钳鱼肉",
   "{20201,501}": "电子黏土",
+  "{20201,5101}": "颈鳍果",
+  "{20201,6001}": "电子基质",
   "{20201,601}": "无人机组件",
+  "{20201,6101}": "金属微晶",
+  "{20201,6201}": "蛋白糊",
+  "{20201,6301}": "碳化硅",
+  "{20201,6401}": "兴奋剂",
+  "{20201,6501}": "Terran即食餐",
   "{20201,6601}": "废金属",
   "{20201,6801}": "原始废料",
   "{20201,701}": "能量电池",
+  "{20201,7101}": "Bo腐",
+  "{20201,7201}": "Bo气",
+  "{20201,7301}": "浮游生物",
   "{20201,801}": "引擎部件",
   "{20201,901}": "励磁线圈"
 }
