--- a/src/assets/game_data/Timelines (7.10)/locales/zh-TW.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/zh-TW.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "先進電子設備產線",
   "{20104,102101}": "棲息地環加固結構",
   "{20104,102201}": "棲息地服務區",
+  "{20104,102601}": "鑽機輔助設施",
+  "{20104,102701}": "鑽機入口模塊",
+  "{20104,102801}": "防禦陣列",
+  "{20104,102901}": "宿舍模塊",
+  "{20104,103001}": "半環宿舍",
   "{20104,10301}": "反物質單元產線",
+  "{20104,103101}": "倉儲環",
+  "{20104,103201}": "倉儲臂",
   "{20104,103601}": "頂層觀景台",
   "{20104,103701}": "溫室觀景台",
   "{20104,103801}": "亭閣觀景台",
@@ -35,7 +42,9 @@
   "{20104,10801}": "能量電池產線",
   "{20104,10901}": "引擎部件產線",
   "{20104,11001}": "Teladi 引擎部件產線",
+  "{20104,110101}": "賭場",
   "{20104,110201}": "娛樂室",
+  "{20104,110301}": "費洛蒙藝術畫廊",
   "{20104,11101}": "勵磁線圈產線",
   "{20104,11201}": "石墨產線",
   "{20104,11301}": "船體部件產線",
@@ -67,6 +76,7 @@
   "{20104,13801}": "艷耀星塵產線",
   "{20104,13901}": "艷耀蝸牛產線",
   "{20104,14001}": "白豆產線",
+  "{20104,140101}": "Terran 廢料再生設施",
   "{20104,14101}": "白豆莢產線",
   "{20104,14201}": "滋養油產線",
   "{20104,14301}": "太空煙草產線",
@@ -74,7 +84,22 @@
   "{20104,14501}": "沼澤植物產線",
   "{20104,14601}": "T材料產線",
   "{20104,14701}": "矩陣太陽能面板",
+  "{20104,14801}": "頸鰭果產線",
+  "{20104,14901}": "鉗魚產線",
+  "{20104,15001}": "Split 醫療物資產線",
   "{20104,150101}": "廣域感應器陣列",
+  "{20104,15101}": "電子基質生產線",
+  "{20104,15201}": "Terran 能量電池產線",
+  "{20104,15301}": "Terran 醫療物資產線",
+  "{20104,15401}": "金屬微晶產線",
+  "{20104,15501}": "地球即食餐產線",
+  "{20104,15601}": "蛋白糊產線",
+  "{20104,15701}": "碳化矽產線",
+  "{20104,15801}": "興奮劑產線",
+  "{20104,15901}": "Boron 醫療物資產線",
+  "{20104,16001}": "BoGas 生產",
+  "{20104,16101}": "浮游生物生產",
+  "{20104,16201}": "BoFu 生產",
   "{20104,20101}": "Argon S 集裝倉儲",
   "{20104,20201}": "Argon M 集裝倉儲",
   "{20104,20301}": "Argon L 集裝倉儲",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Teladi L 固體倉儲",
   "{20104,23301}": "Argon L 通用倉儲",
   "{20104,24001}": "矩陣倉儲",
+  "{20104,25101}": "Split S 集裝倉儲",
+  "{20104,25201}": "Split M 集裝倉儲",
+  "{20104,25301}": "Split L 集裝倉儲",
+  "{20104,26101}": "Split S 液體倉儲",
+  "{20104,26201}": "Split M 液體倉儲",
+  "{20104,26301}": "Split L 液體倉儲",
+  "{20104,27101}": "Split S 固體倉儲",
+  "{20104,27201}": "Split M 固體倉儲",
+  "{20104,27301}": "Split L 固體倉儲",
   "{20104,30101}": "Argon S 居住區",
   "{20104,30201}": "Argon M 居住區",
   "{20104,30301}": "Argon L 居住區",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Teladi S 生物群落",
   "{20104,30801}": "Teladi M 生物群落",
   "{20104,30901}": "Teladi L 生物群落",
+  "{20104,31001}": "Split S 客廳",
+  "{20104,31101}": "Split M 客廳",
+  "{20104,31201}": "Split L 客廳",
+  "{20104,31301}": "Terran S 生活艙室",
+  "{20104,31401}": "Terran M 生活艙室",
+  "{20104,31501}": "Terran L 生活艙室",
+  "{20104,31601}": "Argon S 宿舍",
+  "{20104,31701}": "Argon M 宿舍",
+  "{20104,31801}": "Argon L 宿舍",
+  "{20104,31901}": "Boron S 綠洲",
+  "{20104,32001}": "Boron M 綠洲",
+  "{20104,32101}": "Boron L 綠洲",
+  "{20104,32201}": "Argon L 居住尖塔",
+  "{20104,32301}": "Argon XL 居住尖塔",
   "{20104,40101}": "Argon 管理中心",
   "{20104,40201}": "Paranid 管理中心",
   "{20104,40301}": "Teladi 管理中心",
+  "{20104,40401}": "Split 管理中心",
   "{20104,40601}": "Argon 碟型防禦平台",
   "{20104,40701}": "Paranid 碟型防禦平台",
   "{20104,40801}": "Teladi 碟型防禦平台",
+  "{20104,40901}": "Split 碟型防禦平台",
   "{20104,41101}": "Argon 橋型防禦平台",
   "{20104,41201}": "Paranid 橋型防禦平台",
   "{20104,41301}": "Teladi 橋型防禦平台",
+  "{20104,41401}": "Split 橋型防禦平台",
   "{20104,41601}": "Paranid 勢力首都",
   "{20104,50101}": "Argon 基礎連接結構 01",
   "{20104,50201}": "Argon 基礎連接結構 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Teladi 基礎連接結構 01",
   "{20104,50801}": "Teladi 基礎連接結構 02",
   "{20104,50901}": "Teladi 基礎連接結構 03",
+  "{20104,51001}": "Split 基礎連接結構 01",
+  "{20104,51101}": "Split 基礎連接結構 02",
+  "{20104,51201}": "Split 基礎連接結構 03",
   "{20104,51401}": "Argon 交叉連接結構 01",
   "{20104,51501}": "Paranid 交叉連接結構 01",
   "{20104,51601}": "Paranid 交叉連接結構 02",
   "{20104,51701}": "Paranid 交叉連接結構 03",
   "{20104,51801}": "Teladi 交叉連接結構 01",
+  "{20104,51901}": "Split 交叉連接結構 01",
   "{20104,52101}": "Argon 垂直連接結構 01",
   "{20104,52201}": "Argon 垂直連接結構 02",
   "{20104,52301}": "Paranid 垂直連接結構 01",
   "{20104,52401}": "Paranid 垂直連接結構 02",
   "{20104,52501}": "Teladi 垂直連接結構 01",
   "{20104,52601}": "Teladi 垂直連接結構 02",
+  "{20104,52701}": "Split 垂直連接結構 01",
+  "{20104,52801}": "Split 垂直連接結構 02",
   "{20104,52901}": "遠征 基礎連接結構 01",
   "{20104,53001}": "遠征 基礎連接結構 02",
   "{20104,53101}": "遠征 基礎連接結構 03",
   "{20104,53201}": "遠征 交叉連接結構 01",
   "{20104,53301}": "遠征 垂直連接結構 01",
   "{20104,53401}": "遠征 垂直連接結構 02",
+  "{20104,53501}": "Terran 垂直連接結構 01",
+  "{20104,53601}": "Terran 垂直連接結構 02",
+  "{20104,53701}": "Terran 交叉連接結構 01",
+  "{20104,53801}": "Terran 基礎連接結構 01",
+  "{20104,53901}": "Terran 基礎連接結構 02",
+  "{20104,54001}": "Terran 基礎連接結構 03",
+  "{20104,54101}": "Boron 基礎連接結構 01",
+  "{20104,54201}": "Boron 基礎連接結構 02",
+  "{20104,54301}": "Boron 基礎連接結構 03",
+  "{20104,54401}": "Boron 基礎連接結構 04",
+  "{20104,54501}": "Boron 基礎連接結構 05",
+  "{20104,54601}": "Boron 交叉連接結構 01",
+  "{20104,54701}": "Boron 交叉連接結構 02",
+  "{20104,54801}": "Boron 垂直連接結構 01",
+  "{20104,54901}": "Boron 垂直連接結構 02",
+  "{20104,55101}": "Argon 弧形連接結構 02",
+  "{20104,55301}": "Argon 跨距連接結構 01",
+  "{20104,55401}": "Argon 跨距連接結構 02",
   "{20104,55501}": "Argon 弧形連接結構 01",
   "{20104,55601}": "Argon 交叉連接結構 03",
   "{20104,55701}": "Argon 交叉連接結構 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "XL級飛船裝配矩陣",
   "{20104,61301}": "S/M級飛船製造港",
   "{20104,61401}": "S/M級飛船維護港",
+  "{20104,61601}": "Terran S/M級飛船維護港",
+  "{20104,61701}": "Terran L級飛船維護港",
+  "{20104,61801}": "Terran XL級飛船維護港",
+  "{20104,61901}": "Terran S/M級飛船製造港",
+  "{20104,62001}": "Terran L級飛船製造港",
+  "{20104,62101}": "Terran XL級飛船製造港",
+  "{20104,62201}": "Boron S/M級飛船維護港",
+  "{20104,62301}": "Boron L級飛船維護港",
+  "{20104,62401}": "Boron XL級飛船維護港",
+  "{20104,62501}": "Boron S/M級飛船製造港",
+  "{20104,62601}": "Boron L級飛船製造港",
+  "{20104,62701}": "Boron XL級飛船製造港",
   "{20104,70101}": "1M6S 基礎 停靠區",
   "{20104,70201}": "1M6S 標準 停靠區",
   "{20104,70301}": "1M6S 豪華 停靠區",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Teladi 單一停靠區 碼頭",
   "{20104,71901}": "Teladi T型-3x泊位 碼頭",
   "{20104,72001}": "Teladi E型-3x泊位 碼頭",
+  "{20104,72101}": "Split 單一停靠區 碼頭",
+  "{20104,72201}": "Split T型-4x泊位 碼頭",
+  "{20104,72301}": "Split E型-3x泊位 碼頭",
   "{20104,73301}": "8M 豪華 停靠區",
   "{20104,73401}": "Argon貿易空間站 單一停靠區 碼頭",
+  "{20104,73601}": "Terran 單一停靠區 碼頭",
+  "{20104,73701}": "Terran T型-3x泊位 碼頭",
+  "{20104,73801}": "Terran E型-3x泊位 碼頭",
+  "{20104,73901}": "Terran T型-4x泊位 碼頭",
+  "{20104,74001}": "Terran貿易空間站 六角停靠區 碼頭",
+  "{20104,74101}": "Terran 4M10S 豪華 停靠區",
+  "{20104,74201}": "Boron 單一停靠區 碼頭",
+  "{20104,74301}": "Boron T型-4x泊位 碼頭",
+  "{20104,74401}": "Boron E型-3x泊位 碼頭",
+  "{20104,74501}": "Boron 貿易站 四聯停靠區 碼頭",
+  "{20104,74701}": "Boron 4M14S 豪華 停靠區",
+  "{20104,74801}": "Boron 貿易站 六角停靠區 碼頭",
   "{20104,74901}": "Argon 單一短停靠區 碼頭",
+  "{20104,90101}": "Terran S 集裝倉儲",
+  "{20104,90201}": "Terran M 集裝倉儲",
+  "{20104,90301}": "Terran L 集裝倉儲",
+  "{20104,90401}": "Terran S 液體倉儲",
+  "{20104,90501}": "Terran M 液體倉儲",
+  "{20104,90601}": "Terran L 液體倉儲",
+  "{20104,90701}": "Terran S 固體倉儲",
+  "{20104,90801}": "Terran M 固體倉儲",
+  "{20104,90901}": "Terran L 固體倉儲",
+  "{20104,91701}": "Terran M 貿易空間站集裝倉儲",
+  "{20104,91901}": "Terran S 貿易空間站液體倉儲",
+  "{20104,92501}": "戍子護盾發生器",
+  "{20104,92601}": "冷凝態封裝廠",
+  "{20104,92701}": "Boron S 集裝倉儲",
+  "{20104,92801}": "Boron M 集裝倉儲",
+  "{20104,92901}": "Boron L 集裝倉儲",
+  "{20104,93001}": "Boron S 液體倉儲",
+  "{20104,93101}": "Boron M 液體倉儲",
+  "{20104,93201}": "Boron L 液體倉儲",
+  "{20104,93301}": "Boron S 固體倉儲",
+  "{20104,93401}": "Boron M 固體倉儲",
+  "{20104,93501}": "Boron L 固體倉儲",
+  "{20104,95001}": "Terran 管理中心",
+  "{20104,95101}": "Terran 碟型防禦平台",
+  "{20104,95201}": "Terran 橋型防禦平台",
+  "{20104,95301}": "Boron 管理中心",
+  "{20104,95401}": "Boron 碟型防禦平台",
+  "{20104,95501}": "Boron 橋型防禦平台",
   "{20201,101}": "先進電子設備",
   "{20201,1101}": "食品配給",
   "{20201,1201}": "船體部件",
@@ -227,11 +357,22 @@
   "{20201,4701}": "水",
   "{20201,4801}": "武器部件",
   "{20201,4901}": "小麥",
+  "{20201,5001}": "鉗魚肉",
   "{20201,501}": "電子黏土",
+  "{20201,5101}": "頸鰭果",
+  "{20201,6001}": "電子基質",
   "{20201,601}": "無人機組件",
+  "{20201,6101}": "金屬微晶",
+  "{20201,6201}": "蛋白糊",
+  "{20201,6301}": "碳化矽",
+  "{20201,6401}": "興奮劑",
+  "{20201,6501}": "Terran即食餐",
   "{20201,6601}": "廢金屬",
   "{20201,6801}": "原始廢料",
   "{20201,701}": "能量電池",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "BoGas",
+  "{20201,7301}": "浮游生物",
   "{20201,801}": "引擎部件",
   "{20201,901}": "勵磁線圈"
 }
