--- a/src/assets/game_data/Timelines (7.10)/locales/it.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/it.json
@@ -25,7 +25,14 @@
   "{20104,10201}": "Produzione di Elettronica Avanzata",
   "{20104,102101}": "Morsa ad Anello dell'Habitat",
   "{20104,102201}": "Sezione di Servizio dell'Habitat",
+  "{20104,102601}": "Struttura di Supporto Trivella",
+  "{20104,102701}": "Modulo di Accesso Trivella",
+  "{20104,102801}": "Batteria di Difesa",
+  "{20104,102901}": "Modulo Dormitorio",
+  "{20104,103001}": "Dormitorio Semi-Anello",
   "{20104,10301}": "Produzione di Celle ad Antimateria",
+  "{20104,103101}": "Anello Magazzino",
+  "{20104,103201}": "Braccio Magazzino",
   "{20104,103601}": "Ponte di Osservazione con Attico",
   "{20104,103701}": "Ponte d'Osservazione con Vetrata",
   "{20104,103801}": "Padiglione Osservatorio",
@@ -35,7 +42,9 @@
   "{20104,10801}": "Produzione di Celle di Energia",
   "{20104,10901}": "Produzione di Parti per Motori",
   "{20104,11001}": "Produzione di Parti per Motori Teladi",
+  "{20104,110101}": "Casinò",
   "{20104,110201}": "Sala Scommesse",
+  "{20104,110301}": "Galleria d'Arte Feromonica",
   "{20104,11101}": "Produzione di Bobine di Campo",
   "{20104,11201}": "Produzione di Grafene",
   "{20104,11301}": "Produzione di Parti per Scafi",
@@ -67,6 +76,7 @@
   "{20104,13801}": "Produzione di Polvere Maja",
   "{20104,13901}": "Produzione di Chiocciole Maja",
   "{20104,14001}": "Produzione di Semi di Soja",
+  "{20104,140101}": "Riciclatore di Metalli Terrestre",
   "{20104,14101}": "Produzione di Polpa di Soja",
   "{20104,14201}": "Produzione di Olio Nostropo",
   "{20104,14301}": "Produzione di Canapa Spaziale",
@@ -74,7 +84,22 @@
   "{20104,14501}": "Produzione di Erba Palustre",
   "{20104,14601}": "Produzione di Teladianium",
   "{20104,14701}": "Pannelli Solari della Matrice",
+  "{20104,14801}": "Produzione di Scruffin",
+  "{20104,14901}": "Produzione di Chelt",
+  "{20104,15001}": "Produzione di Forniture Mediche Split",
   "{20104,150101}": "Sensori ad Ampio Raggio",
+  "{20104,15101}": "Produzione di Substrato Computronico",
+  "{20104,15201}": "Produzione di Celle di Energia Terrestre",
+  "{20104,15301}": "Produzione di Forniture Mediche Terrestre",
+  "{20104,15401}": "Produzione di Microreticolo Metallico",
+  "{20104,15501}": "Produzione di Razioni da Combattimento",
+  "{20104,15601}": "Produzione di Pasta di Proteine",
+  "{20104,15701}": "Produzione di Carburo di Silicio",
+  "{20104,15801}": "Produzione di Stimolanti",
+  "{20104,15901}": "Produzione di Forniture Mediche Boron",
+  "{20104,16001}": "Produzione di BoGas",
+  "{20104,16101}": "Produzione di Plankton",
+  "{20104,16201}": "Produzione di BoFu",
   "{20104,20101}": "Magazzino Container Argon S",
   "{20104,20201}": "Magazzino Container Argon M",
   "{20104,20301}": "Magazzino Container Argon L",
@@ -104,6 +129,15 @@
   "{20104,22901}": "Magazzino Solidi Teladi L",
   "{20104,23301}": "Magazzino Universale Argon L",
   "{20104,24001}": "Magazzino della Matrice",
+  "{20104,25101}": "Magazzino Container Split S",
+  "{20104,25201}": "Magazzino Container Split M",
+  "{20104,25301}": "Magazzino Container Split L",
+  "{20104,26101}": "Magazzino Liquidi Split S",
+  "{20104,26201}": "Magazzino Liquidi Split M",
+  "{20104,26301}": "Magazzino Liquidi Split L",
+  "{20104,27101}": "Magazzino Solidi Split S",
+  "{20104,27201}": "Magazzino Solidi Split M",
+  "{20104,27301}": "Magazzino Solidi Split L",
   "{20104,30101}": "Habitat Argon S",
   "{20104,30201}": "Habitat Argon M",
   "{20104,30301}": "Habitat Argon L",
@@ -113,15 +147,32 @@
   "{20104,30701}": "Bioma Teladi S",
   "{20104,30801}": "Bioma Teladi M",
   "{20104,30901}": "Bioma Teladi L",
+  "{20104,31001}": "Salotto Split S",
+  "{20104,31101}": "Salotto Split M",
+  "{20104,31201}": "Salotto Split L",
+  "{20104,31301}": "Quartieri Abitativi Terrestri S",
+  "{20104,31401}": "Quartieri Abitativi Terrestri M",
+  "{20104,31501}": "Quartieri Abitativi Terrestri L",
+  "{20104,31601}": "Dormitorio Argon S",
+  "{20104,31701}": "Dormitorio Argon M",
+  "{20104,31801}": "Dormitorio Argon L",
+  "{20104,31901}": "Oasi Boron S",
+  "{20104,32001}": "Oasi Boron M",
+  "{20104,32101}": "Oasi Boron L",
+  "{20104,32201}": "Guglia Abitativa Argon L",
+  "{20104,32301}": "Guglia Abitativa Argon XL",
   "{20104,40101}": "Centro Amministrativo Argon",
   "{20104,40201}": "Centro Amministrativo Paranid",
   "{20104,40301}": "Centro Amministrativo Teladi",
+  "{20104,40401}": "Centro Amministrativo Split",
   "{20104,40601}": "Piattaforma Difensiva a Disco Argon",
   "{20104,40701}": "Piattaforma Difensiva a Disco Paranid",
   "{20104,40801}": "Piattaforma Difensiva a Disco Teladi",
+  "{20104,40901}": "Piattaforma Difensiva a Disco Split",
   "{20104,41101}": "Piattaforma Difensiva a Ponte Argon",
   "{20104,41201}": "Piattaforma Difensiva a Ponte Paranid",
   "{20104,41301}": "Piattaforma Difensiva a Ponte Teladi",
+  "{20104,41401}": "Piattaforma Difensiva a Ponte Split",
   "{20104,41601}": "Sede di Fazione Paranid",
   "{20104,50101}": "Struttura di Connessione di Base Argon 01",
   "{20104,50201}": "Struttura di Connessione di Base Argon 02",
@@ -132,23 +183,47 @@
   "{20104,50701}": "Struttura di Connessione di Base Teladi 01",
   "{20104,50801}": "Struttura di Connessione di Base Teladi 02",
   "{20104,50901}": "Struttura di Connessione di Base Teladi 03",
+  "{20104,51001}": "Struttura di Connessione di Base Split 01",
+  "{20104,51101}": "Struttura di Connessione di Base Split 02",
+  "{20104,51201}": "Struttura di Connessione di Base Split 03",
   "{20104,51401}": "Struttura di Connessione a Croce Argon 01",
   "{20104,51501}": "Struttura di Connessione a Croce Paranid 01",
   "{20104,51601}": "Struttura di Connessione a Croce Paranid 02",
   "{20104,51701}": "Struttura di Connessione a Y Paranid 01",
   "{20104,51801}": "Struttura di Connessione a Croce Teladi 01",
+  "{20104,51901}": "Struttura di Connessione a Y Split 01",
   "{20104,52101}": "Struttura di Connessione Verticale Argon 01",
   "{20104,52201}": "Struttura di Connessione Verticale Argon 02",
   "{20104,52301}": "Struttura di Connessione Verticale Paranid 01",
   "{20104,52401}": "Struttura di Connessione Verticale Paranid 02",
   "{20104,52501}": "Struttura di Connessione Verticale Teladi 01",
   "{20104,52601}": "Struttura di Connessione Verticale Teladi 02",
+  "{20104,52701}": "Struttura di Connessione Verticale Split 01",
+  "{20104,52801}": "Struttura di Connessione Verticale Split 02",
   "{20104,52901}": "Struttura di Connessione di Base per Avventure 01",
   "{20104,53001}": "Struttura di Connessione di Base per Avventure 02",
   "{20104,53101}": "Struttura di Connessione di Base per Avventure 03",
   "{20104,53201}": "Struttura di Connessione a Croce per Avventure 01",
   "{20104,53301}": "Struttura di Connessione Verticale per Avventure 01",
   "{20104,53401}": "Struttura di Connessione Verticale per Avventure 02",
+  "{20104,53501}": "Struttura di Connessione Verticale 01 Terrestre",
+  "{20104,53601}": "Struttura di Connessione Verticale 02 Terrestre",
+  "{20104,53701}": "Struttura di Connessione a Croce 01 Terrestre",
+  "{20104,53801}": "Struttura di Connessione di Base 01 Terrestre",
+  "{20104,53901}": "Struttura di Connessione di Base 02 Terrestre",
+  "{20104,54001}": "Struttura di Connessione di Base 03 Terrestre",
+  "{20104,54101}": "Struttura di Connessione di Base Boron 01",
+  "{20104,54201}": "Struttura di Connessione di Base Boron 02",
+  "{20104,54301}": "Struttura di Connessione di Base Boron 03",
+  "{20104,54401}": "Struttura di Connessione di Base Boron 04",
+  "{20104,54501}": "Struttura di Connessione di Base Boron 05",
+  "{20104,54601}": "Struttura di Connessione a Y Boron 01",
+  "{20104,54701}": "Struttura di Connessione Esagonale Boron 01",
+  "{20104,54801}": "Struttura di Connessione Verticale Boron 01",
+  "{20104,54901}": "Struttura di Connessione Verticale Boron 02",
+  "{20104,55101}": "Struttura di Connessione ad Arco Argon 02",
+  "{20104,55301}": "Struttura di Connessione a Campata Argon 01",
+  "{20104,55401}": "Struttura di Connessione a Campata Argon 02",
   "{20104,55501}": "Struttura di Connessione ad Arco Argon 01",
   "{20104,55601}": "Struttura di Connessione a Croce Argon 03",
   "{20104,55701}": "Struttura di Connessione a Croce Argon 02",
@@ -165,6 +240,18 @@
   "{20104,61201}": "Matrice d'Assemblaggio XL",
   "{20104,61301}": "Baia di Costruzione Navi S/M",
   "{20104,61401}": "Baia di Manutenzione Navi S/M",
+  "{20104,61601}": "Baia di Manutenzione Navi S/M Terrestre",
+  "{20104,61701}": "Baia di Manutenzione Navi L Terrestre",
+  "{20104,61801}": "Baia di Manutenzione Navi XL Terrestre",
+  "{20104,61901}": "Baia di Costruzione Navi S/M Terrestre",
+  "{20104,62001}": "Baia di Costruzione Navi L Terrestre",
+  "{20104,62101}": "Baia di Costruzione Navi XL Terrestre",
+  "{20104,62201}": "Baia di Manutenzione Navi S/M Boron",
+  "{20104,62301}": "Baia di Manutenzione Navi L Boron",
+  "{20104,62401}": "Baia di Manutenzione Navi XL Boron",
+  "{20104,62501}": "Baia di Costruzione Navi S/M Boron",
+  "{20104,62601}": "Baia di Costruzione Navi L Boron",
+  "{20104,62701}": "Baia di Costruzione Navi XL Boron",
   "{20104,70101}": "Area di Attracco Di Base 1M6S",
   "{20104,70201}": "Area di Attracco Standard 1M6S",
   "{20104,70301}": "Area di Attracco Di Lusso 1M6S",
@@ -183,9 +270,52 @@
   "{20104,71801}": "Molo di Attracco Singolo Teladi",
   "{20104,71901}": "Molo di Attracco Triplo a T Teladi",
   "{20104,72001}": "Molo di Attracco Triplo ad E Teladi",
+  "{20104,72101}": "Molo di Attracco Singolo Split",
+  "{20104,72201}": "Molo di Attracco Quadruplo a T Split",
+  "{20104,72301}": "Molo di Attracco Triplo ad E Split",
   "{20104,73301}": "Area di Attracco Di Lusso 8M",
   "{20104,73401}": "Molo di Attracco Singolo per Spazioporto Commerciale Argon",
+  "{20104,73601}": "Attracco Singolo Molo Terrestre",
+  "{20104,73701}": "Attracco Triplo a T Molo Terrestre",
+  "{20104,73801}": "Attracco Triplo ad E Molo Terrestre",
+  "{20104,73901}": "Molo d'Attracco Quadruplo a T Terrestre",
+  "{20104,74001}": "Molo d'Attracco Sestuplo per Spazioporto Commerciale Terrestre",
+  "{20104,74101}": "Area di Attracco Di Lusso 4M10S Terrestre",
+  "{20104,74201}": "Molo di Attracco Singolo Boron",
+  "{20104,74301}": "Molo di Attracco Quadruplo a T Boron",
+  "{20104,74401}": "Molo di Attracco Triplo ad E Boron",
+  "{20104,74501}": "Molo di Attracco Quadruplo Spazioporto Commerciale Boron",
+  "{20104,74701}": "4M14S Area di Attracco Di Lusso Boron",
+  "{20104,74801}": "Molo di Attracco Sestuplo Spazioporto Commerciale Boron",
   "{20104,74901}": "Argon Molo Attracco Singolo Corto",
+  "{20104,90101}": "Magazzino Container Terrestre S",
+  "{20104,90201}": "Magazzino Container Terrestre M",
+  "{20104,90301}": "Magazzino Container Terrestre L",
+  "{20104,90401}": "Magazzino Liquidi Terrestre S",
+  "{20104,90501}": "Magazzino Liquidi Terrestre M",
+  "{20104,90601}": "Magazzino Liquidi Terrestre L",
+  "{20104,90701}": "Magazzino Solidi Terrestre S",
+  "{20104,90801}": "Magazzino Solidi Terrestre M",
+  "{20104,90901}": "Magazzino Solidi Terrestre L",
+  "{20104,91701}": "Magazzino Container per Spazioporto Commerciale Terrestre M",
+  "{20104,91901}": "Magazzino Liquidi per Spazioporto Commerciale Terrestre S",
+  "{20104,92501}": "Generatore di Scudi Protectyon",
+  "{20104,92601}": "Impianto di Contenimento Condensato",
+  "{20104,92701}": "Magazzino Container Boron S",
+  "{20104,92801}": "Magazzino Container Boron M",
+  "{20104,92901}": "Magazzino Container Boron L",
+  "{20104,93001}": "Magazzino Liquidi Boron S",
+  "{20104,93101}": "Magazzino Liquidi Boron M",
+  "{20104,93201}": "Magazzino Liquidi Boron L",
+  "{20104,93301}": "Magazzino Solidi Boron S",
+  "{20104,93401}": "Magazzino Solidi Boron M",
+  "{20104,93501}": "Magazzino Solidi Boron L",
+  "{20104,95001}": "Centro Amministrativo Terrestre",
+  "{20104,95101}": "Piattaforma Difensiva a Disco Terrestre",
+  "{20104,95201}": "Piattaforma Difensiva a Ponte Terrestre",
+  "{20104,95301}": "Centro Amministrativo Boron",
+  "{20104,95401}": "Piattaforma Difensiva a Disco Boron",
+  "{20104,95501}": "Piattaforma Difensiva a Ponte Boron",
   "{20201,101}": "Elettronica Avanzata",
   "{20201,1101}": "Razioni Alimentari",
   "{20201,1201}": "Parti per Scafi",
@@ -227,11 +357,22 @@
   "{20201,4701}": "Acqua",
   "{20201,4801}": "Parti per Armi",
   "{20201,4901}": "Frumento",
+  "{20201,5001}": "Carne di Chelt",
   "{20201,501}": "Claytronica",
+  "{20201,5101}": "Frutti Scruffin",
+  "{20201,6001}": "Substrato Computronico",
   "{20201,601}": "Parti per Droni",
+  "{20201,6101}": "Microreticolo Metallico",
+  "{20201,6201}": "Pasta di Proteine",
+  "{20201,6301}": "Carburo di Silicio",
+  "{20201,6401}": "Stimolanti",
+  "{20201,6501}": "Razioni da Combattimento Terrestri",
   "{20201,6601}": "Metalli di Recupero",
   "{20201,6801}": "Rottami Grezzi",
   "{20201,701}": "Celle di Energia",
+  "{20201,7101}": "BoFu",
+  "{20201,7201}": "BoGas",
+  "{20201,7301}": "Plancton",
   "{20201,801}": "Parti per Motori",
   "{20201,901}": "Bobine di Campo"
 }
